--- a/_posts/2022-08-17-INITIUM-水果王国的美名与破口-中国打组合拳制裁-台湾如何走出农业困境.html
+++ b/_posts/2022-08-17-INITIUM-水果王国的美名与破口-中国打组合拳制裁-台湾如何走出农业困境.html
@@ -10,25 +10,13 @@ author: 焦钧
 
 <p>「中共围岛军演直接影响到台湾能源进口，但多数人不解的是，这和农业有何关系？」</p><p>焦钧</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/dbed3c422b67484faca2227e0fa9d65c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月16日，台北，市场上的水果摊。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年8月16日，台北，市场上的水果摊。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p><strong>（焦钧，《水果政治学》、《走出岛国农业困境》作者）</strong></p>
-<p>农业议题永远不是政治人物思考的核心，然农业成为“问题”，却往往都是因为政治（或政治人物）而起。远的不说，今年2月爆发的俄乌战争，人们才警觉到，原来因俄军封锁乌克兰港口使得小麦出口受阻，将导致全球粮食价格上涨，进而引发通货膨胀危机。</p>
-<p>如果乌克兰离我们太遥远，那么这个月初<a href="https://theinitium.com/article/20220803-taiwan-whats-new-pelosi-visit-taiwan/">访台</a>的美国众议院议长佩洛西，除了引爆第四次台海危机外，中共对台系统接连出招，再次禁止台湾生鲜农水产品进口，包含暂停超过2000笔的台湾食品输中，并以在台湾柑橘类水果“检出大洋臀纹粉蚧”为由也暂停进口；此外，同遭波及的另有冰鲜白带鱼与冻竹荚鱼，而天然砂也遭中国商务部暂停出口台湾。</p>
-<p>在中共祭出这一系列制裁手段后，其背后的政治意涵以及对两岸经济交流，会产生什么样的冲击与影响，以及台湾将如何自处，特别是农业部门要有什么样的战略布局，实有必要深入爬梳与探讨。</p>
- 
+<p>农业议题永远不是政治人物思考的核心，然农业成为“问题”，却往往都是因为政治（或政治人物）而起。远的不说，今年2月爆发的俄乌战争，人们才警觉到，原来因俄军封锁乌克兰港口使得小麦出口受阻，将导致全球粮食价格上涨，进而引发通货膨胀危机。<br><br>如果乌克兰离我们太遥远，那么这个月初<a href="https://theinitium.com/article/20220803-taiwan-whats-new-pelosi-visit-taiwan/">访台</a>的美国众议院议长佩洛西，除了引爆第四次台海危机外，中共对台系统接连出招，再次禁止台湾生鲜农水产品进口，包含暂停超过2000笔的台湾食品输中，并以在台湾柑橘类水果“检出大洋臀纹粉蚧”为由也暂停进口；此外，同遭波及的另有冰鲜白带鱼与冻竹荚鱼，而天然砂也遭中国商务部暂停出口台湾。<br><br>在中共祭出这一系列制裁手段后，其背后的政治意涵以及对两岸经济交流，会产生什么样的冲击与影响，以及台湾将如何自处，特别是农业部门要有什么样的战略布局，实有必要深入爬梳与探讨。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b426ede2811547f592c274b43afabc30.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月4日，台北的一间早餐店，电视新闻播放关于中国在台湾周边进行军事演习的新闻。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年8月4日，台北的一间早餐店，电视新闻播放关于中国在台湾周边进行军事演习的新闻。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure>
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
+<h2>一旦“围岛”军演成新常态，台湾粮食安全恐现危机</h2>
+<p>农业发展首要之务是粮食安全。从全球化观点，如何养活全球70亿人口，如何避免粮食的全球供应“不患寡而患不均”，更是全球政治人物理应优先解决的课题。<br><br>把这样的命题放在两岸农业，显得特别敏感与脆弱：这是因为，中国大陆不仅是台湾农产品最大的出口市场，从此次佩洛西访台后解放军进行的<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">军演课目观察</a>，更让台湾人看清台湾被封锁的高风险性，不仅仅只是能源一项，极度仰赖粮食进口的台湾，必须要有高度的全民忧患意识，切不可再认为台湾是一个丰食无虞的宝岛。</p>
+<p>回到此次中共军演，围岛作战直接影响到台湾能源进口，但多数人不解的是，这和农业有何关系？</p>
  
  
  
@@ -40,6 +28,15 @@ author: 焦钧
  
  
  
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
 
  
  
@@ -48,10 +45,7 @@ author: 焦钧
  
  
  
-<p><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b426ede2811547f592c274b43afabc30.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月4日，台北的一间早餐店，电视新闻播放关于中国在台湾周边进行军事演习的新闻。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption">2022年8月4日，台北的一间早餐店，电视新闻播放关于中国在台湾周边进行军事演习的新闻。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>一旦“围岛”军演成新常态，台湾粮食安全恐现危机</p><p>
-</p><p>一旦，台湾遭解放军封锁导致进口玉米、大豆耗尽，将面临到饲料短缺危机，而首先遭殃的，便是鸡、猪等动物性蛋白质的供应。</p>
-<p></p><p>农业发展首要之务是粮食安全。从全球化观点，如何养活全球70亿人口，如何避免粮食的全球供应“不患寡而患不均”，更是全球政治人物理应优先解决的课题。</p><p>把这样的命题放在两岸农业，显得特别敏感与脆弱：这是因为，中国大陆不仅是台湾农产品最大的出口市场，从此次佩洛西访台后解放军进行的<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">军演课目观察</a>，更让台湾人看清台湾被封锁的高风险性，不仅仅只是能源一项，极度仰赖粮食进口的台湾，必须要有高度的全民忧患意识，切不可再认为台湾是一个丰食无虞的宝岛。</p><p>回到此次中共军演，围岛作战直接影响到台湾能源进口，但多数人不解的是，这和农业有何关系？</p><p>简单说，台湾的粮食自给率（food self-sufficiency rate）只有30%左右，比起邻近的日本40%有一段差距；虽然很多人鄙视此项指标，认为这是上个世纪二战结束之后的产物，当代贸易自由化下，全球供需往来几无障碍，进口得以弥补国内生产不足，加上现代人不只是吃得饱，更要吃得好，营养安全的重要性，更甚粮食自给率单纯的热量计算，但我们从在台湾被俗称为“黄小玉”的三个主要粮食作物——黄豆、玉米、小麦——进口量来看，台湾的进口依赖度超过99%；小麦做为面粉的原物料供应，即便没有面粉为主食，还有稻米可替代，但玉米与黄豆，已是鸡猪饲料的主要来源。</p><p>一旦，台湾遭解放军封锁导致进口玉米、大豆耗尽，将面临到饲料短缺危机，而首先遭殃的，便是鸡、猪等动物性蛋白质的供应；更不要说，台湾当今饮食习惯已多元化，各类食品加工所需的原物料，很多来自于国外供应链，粮食危机的发生，在两岸情势升温且濒临台海战争边缘的时刻，绝非危言耸听。</p><p>台湾农业的GDP产值，一直无法和有“护国神山”之称的晶圆代工产业相比，也因此出现不少“废农论”论调，认为只占GDP 1.8%的农业，是否还有存在之必要。</p><p>然而，民以食为天，俄乌战争的例子殷鉴不远，乌克兰港口被封锁导致小麦、玉米、大麦、葵花油等粮食作物出口受阻，进而引发全球粮食与通膨危机；台湾虽无需过度紧张，但70年来，几乎未曾听闻“饥荒”二字的我们，实应理解自身处境：当下并非承平时期，粮食安全绝对是国家安全的软肋。</p><p>因此，若解放军“围岛”演习成为新常态，我们要优先考量的，并非后续一连串对台政治动作与经济报复，而是要重新审视台湾农业生产结构，是否仍需紧抱“出口导向”的政策。事实上，农产品出口导向，有很大的误解是来自于中国市场过度放大下的膨胀与虚幻——台湾过度沈浸于过去“水果王国”美名迷思，也让北京涉台找到缝隙，成为统战台湾农民之破口。</p><p>是以，面对两岸情势的变化，农业部份要调整出口导向思维，转变为“进口替代”；也就是说，台湾首要厘清有哪些农产品需求过度仰赖进口，而哪些生产量又低于安全警戒值——答案很清楚，就是黄小玉当中的玉米、大豆，绝对要优先以国家战略高度的层级审慎看待，把农业资源适度拨补到杂粮的品种研发、单位产量提高、冷链仓储与加工运用；并从国土防卫与国土保安的角度，重新检讨国有农地与林地的使用。</p><p><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/03/55aa9d3c5701457ca0122f049c3e0bb1.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年3月4日，台湾南投县的一个配送中心，农民从卡车上卸下收获的凤梨。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>简单说，台湾的粮食自给率（food self-sufficiency rate）只有30%左右，比起邻近的日本40%有一段差距；虽然很多人鄙视此项指标，认为这是上个世纪二战结束之后的产物，当代贸易自由化下，全球供需往来几无障碍，进口得以弥补国内生产不足，加上现代人不只是吃得饱，更要吃得好，营养安全的重要性，更甚粮食自给率单纯的热量计算，但我们从在台湾被俗称为“黄小玉”的三个主要粮食作物——黄豆、玉米、小麦——进口量来看，台湾的进口依赖度超过99%；小麦做为面粉的原物料供应，即便没有面粉为主食，还有稻米可替代，但玉米与黄豆，已是鸡猪饲料的主要来源。</p><p>一旦，台湾遭解放军封锁导致进口玉米、大豆耗尽，将面临到饲料短缺危机，而首先遭殃的，便是鸡、猪等动物性蛋白质的供应；更不要说，台湾当今饮食习惯已多元化，各类食品加工所需的原物料，很多来自于国外供应链，粮食危机的发生，在两岸情势升温且濒临台海战争边缘的时刻，绝非危言耸听。</p><p>台湾农业的GDP产值，一直无法和有“护国神山”之称的晶圆代工产业相比，也因此出现不少“废农论”论调，认为只占GDP 1.8%的农业，是否还有存在之必要。</p><p>然而，民以食为天，俄乌战争的例子殷鉴不远，乌克兰港口被封锁导致小麦、玉米、大麦、葵花油等粮食作物出口受阻，进而引发全球粮食与通膨危机；台湾虽无需过度紧张，但70年来，几乎未曾听闻“饥荒”二字的我们，实应理解自身处境：当下并非承平时期，粮食安全绝对是国家安全的软肋。</p><p>因此，若解放军“围岛”演习成为新常态，我们要优先考量的，并非后续一连串对台政治动作与经济报复，而是要重新审视台湾农业生产结构，是否仍需紧抱“出口导向”的政策。事实上，农产品出口导向，有很大的误解是来自于中国市场过度放大下的膨胀与虚幻——台湾过度沈浸于过去“水果王国”美名迷思，也让北京涉台找到缝隙，成为统战台湾农民之破口。</p><p>是以，面对两岸情势的变化，农业部份要调整出口导向思维，转变为“进口替代”；也就是说，台湾首要厘清有哪些农产品需求过度仰赖进口，而哪些生产量又低于安全警戒值——答案很清楚，就是黄小玉当中的玉米、大豆，绝对要优先以国家战略高度的层级审慎看待，把农业资源适度拨补到杂粮的品种研发、单位产量提高、冷链仓储与加工运用；并从国土防卫与国土保安的角度，重新检讨国有农地与林地的使用。</p><p><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/03/55aa9d3c5701457ca0122f049c3e0bb1.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年3月4日，台湾南投县的一个配送中心，农民从卡车上卸下收获的凤梨。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption">2021年3月4日，台湾南投县的一个配送中心，农民从卡车上卸下收获的凤梨。<span class="credit">摄：I-Hwa Cheng/Bloomberg via Getty Images</span></figcaption><p></p><p>北京加速ECFA农水产品早收清单废止进程</p><p>
 </p><p>值得注意的是，两岸ECFA早收清单，当中几项重要、产值高的农水产品，都已陆续因“非关税贸易障碍”的理由，遭禁止进入中国市场，佩洛西的到访，让这项废止动作，更加快了进程。</p>
 <p></p><p>质言之，中共对台所有政策，都是政治决定论；即使小小的一项农产品贸易，背后都是政治思考，并无太多的“农本位”考量空间。</p><p>台湾去年3月遭中共以“截获检疫性有害生物”为由禁止凤梨进口；9月再以同样理由禁止释迦、莲雾进口，今年6月再以验出“禁药”为由暂停活体石斑鱼进口；尔后，随著佩洛西访台后中共展开一连串的军演恫吓，其他部门也必须参一脚，证明在这场军演大戏中，不是只有解放军唱独脚戏。</p><p>台湾生鲜农水产品一直是两岸媒体目光焦点，当几项贸易金额高、占比依赖大的生鲜品项早已被禁之后，接下来的柑橘类鲜果（芸香科、柑橘属，台湾常见包括柳丁、椪柑、桶柑、茂谷柑、柠檬、文旦柚、葡萄柚等）也在预期名单之列；其中茂谷柑、柠檬、文旦柚出口以中国市场为主，其余为日本及东南亚市场。</p><p>柑橘类水果，早在去年凤梨、释迦、莲雾被禁之后，在沙盘推演下也名列“第四波”名单中，只是中间无预警插了一个活体石斑鱼被禁；也就是说，柑橘类被禁的“市场心理效应”已经大幅缩减，且柑橘类多属于可耐储存，出口产值不高、市场依赖占比也相对较低，在第四次台海危机下，中共想借此第四波禁令通告产生的政治效应，已经不高。</p><p>值得注意的是，<a href="https://theinitium.com/article/20200901-taiwan-ecfa-ten-years/">两岸ECFA</a>（Cross-Strait Economic Cooperation Framework Agreement，《海峡两岸经济合作架构协议》）早收清单，当中几项重要、产值高的农水产品，都已陆续因“非关税贸易障碍”的理由，遭禁止进入中国市场；从去年2月26日星期五的一大早，中国海关总署突如其来宣布，台湾凤梨因有害生物之由禁止进口开始，已是一个警讯。</p><p></p><h3>ECFA 早收清单</h3><figcaption>2010年6月29日，台湾海基会与中国海协会正式签署《海峡两岸经济合作架构协议》（ECFA），并于同年9月12日生效，迄今将届满12年。早期收获清单（早收清单）系指“提早降关税的商品清单”，双方将较为迫切且开放对双方（或单方）有利的产品项目，列入早收清单，内容主要分为“货品贸易”及“服务贸易”两部分。依据协议内容，纳入早收之产品关税将分3年逐步降税，并自2013年起已降至0%。</figcaption><p></p><p>只是，当时第一时间，台湾各界很难断定中共对台系统此一动作背后真正的政治意图是什么。从单纯经贸角度视之，确实是中国对世界各国商品、技术导入中国市场的“养、套、杀”手法，借由关闭市场达到对出口国的示警；然当时是否为单一事件，或为组合拳之起手式，直到释迦、莲雾、活体石斑鱼之后，事态发展方明朗化。台湾方几可判断，这一连串针对台湾农水产品的禁令背后，所指涉的就是“终止ECFA农水产品早收清单”。</p><p>进一步分析，因佩洛西的到访，让这项废止动作，不仅浮上台面，更加快了此进程的脚步。当然，中共对台统战过去惯用棒子与萝卜的两路手法，如今佩洛西访台打破两岸平衡，是否让“萝卜”消失，后续仍有待观察。</p><p><a class="image" href="https://theinitium.com/article/20220818-opinion-taiwan-agricultural-trade-bans/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/0c07401c11fd4189b2d7d9ed50227353.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年11月18日台东，一个释迦果园。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
