--- a/_posts/2022-08-18-VOCUS-飛砂-荒漠-阿拉伯的勞倫斯.html
+++ b/_posts/2022-08-18-VOCUS-飛砂-荒漠-阿拉伯的勞倫斯.html
@@ -25,26 +25,14 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">攻佔紅海最大港口、破壞重要鐵路設施，乃至於是收復中東多個彈丸要地，九次的會戰交鋒，阿拉伯人連番告捷！</span>功不可沒，起初還以軍事顧問隱身幕後的勞倫斯，很快就在阿拉伯（伊斯蘭）世界裡，或是英國國內成為名聲響亮的風雲人物！</div>
 <h2 class="draft-block draft--h2" name="header-816so">「這是他們（阿拉伯人）的戰爭，我們只能幫助他們，而非為他們贏得戰爭！」</h2>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/87f17107-9125-46c8-8f2a-067a3a76b73b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">然而，就在大戰終告落幕，面臨著土耳其帝國板塊勢力的全面衰微崩解，勞倫斯，阿拉伯的英雄勞倫斯，這才赫然發現：自己前幾年賣命替阿拉伯人爭取自主、獨立的做法，<span style="font-weight: bold; ">真的是太過於一廂情願了</span>……對於「白金漢宮」跟「唐寧街10號」的領導頭兒來說，根本就是一場精心打造的鬧劇，讓英、法等西方列強們坐享現成的「福利」！</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">原先英國所允諾的，阿拉伯人得以成立一個統一的，以大馬士革（Damascus）為首都的阿拉伯國家……在談判桌上成為泡影，<span style="font-weight: bold; ">敘利亞由法國託管，伊拉克、外約旦（今約旦）和內約旦巴勒斯坦地區（今以色列、巴勒斯坦一帶）則變成英國的中東屬地，白種人掌握了波斯灣地區任命國王與各部族領袖的最高權力。</span></div>
 <div class="draft-block draft--p left">官方說法，英國、法國以戰勝國的姿態，從土耳其的手中搶到了再一次瓜分阿拉伯世界的話語權跟機會，但實際上，白種人根本不想給予阿拉伯人真正的自主，<span style="font-weight: bold; ">說白話，就是另一種惡劣、變相的再殖民（乞丐趕乞丐？）……盛怒之際，勞倫斯以遭到背叛為由，拒絕出任英國政府替他安排的重要職位，包括了坐擁高薪，如同沙漠帝王般的「中東總督」一職！</span></div>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/7fe231ad-2755-4a32-93a3-91bf87cba4fc.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">西元1922年以降，退役的勞倫斯，根據戰時的種種記憶，以及個人對中東的深厚情愫，留下了個人的自傳體回憶錄《智慧的七柱》（Seven Pillars of Wisdom）......</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">以《舊約聖經‧箴言》第九章第一節的經文：<span style="font-weight: bold; ">「智慧建造房屋、鑿成七根柱子。」</span>（Wisdom hath builded her house, she hath hewn out her seven pillars.）來作為書名源起，從25萬字（初稿）、40萬字直到13萬字左右的定稿斟酌與持續修改，勞倫斯在書中逐一介紹阿拉伯世界的著名七大城市，和多年來在中東的點滴過往，是軍旅生涯的軌跡，亦是尋夢著的樂園苦路。（有此一說，勞倫斯有性受虐狂的傾向，尤其喜愛鞭打肉體之痛楚所帶來的歡愉。）</div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://www.amazon.com/Seven-Pillars-Wisdom-T-Lawrence/dp/197959550X">Seven Pillars of Wisdom</a></h3><span>Some Englishmen, of whom Kitchener was chief, believed that a rebellion of Arabs against Turks would enable England, while fighting Germany, simultaneously to defeat Turkey. Their knowledge of the nature and power and country of the Arabic-speaking peoples made them think that the issue of such a...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F516RiQfcR%252BL._SR600%252c315_PIWhiteStrip%252cBottomLeft%252c0%252c35_PIStarRatingFOURANDHALF%252cBottomLeft%252c360%252c-6_SR600%252c315_ZA406%252c445%252c290%252c400%252c400%252cAmazonEmberBold%252c12%252c4%252c0%252c0%252c5_SCLZZZZZZZ_FMpng_BG255%252c255%252c255.jpg&width=550&sign=lvlWg9mF3Wdkut0X9-KGhCkpu435UJkgvIOSCc0BgXU"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://www.books.com.tw/products/0010794815">智慧七柱：經典新版重現(上下冊不分售)</a></h3><span>「人皆有夢，但多寡不同。夜間作夢的人，日間醒來發現心靈塵灰深處所夢不過是虛華一場；但日間作夢的人則是危險人物，因為他們睜著眼行其所夢，甚至使之可能。而我就是如此。」 --阿拉伯的勞倫斯，《智慧七柱》 戰爭改變了學者 一九一四年第一次大戰爆發時，出身牛津大學的湯瑪士．愛德華．勞倫斯(T. E. Lawrence, 1888-1935)剛剛才二十六歲。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fim2.book.com.tw%2Fimage%2FgetImage%3Fi%3Dhttps%3A%2F%2Fwww.books.com.tw%2Fimg%2F001%2F079%2F48%2F0010794815.jpg%26v%3D5b5bee78k%26w%3D1146%26h%3D600&width=550&sign=pdp_YkuHJv9T0cPhuFMN824W-ZG0l-kO-MAQsnfcVMI"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">西元1925年，勞倫斯再次投效軍旅，加入英國空軍，擔任專門負責救援落海傘兵的快艇駕駛員；經過了十年的平淡日子，西元1935年2月，達到法定退役年齡（46歲）的他，正式從軍中退休。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/3fac48e8-82d3-43b7-859b-53991bdc11b2.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但是，</div>
@@ -56,9 +44,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">尾聲：</div>
 <div class="draft-block draft--p left">由奧圖爺（Peter O'Toole）領銜主演，倒敘式陳述勞倫斯沙場戰功的史詩級電影《阿拉伯的勞倫斯》，<span style="font-weight: bold; ">主要參考著《智慧的七柱》的內容，並於西元1963年的第35屆奧斯卡金像獎上大放異彩，除了勇奪七座主要獎項（最佳影片、最佳導演等），更是今日好萊塢影史上有關阿拉伯題材的第一巨片。</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/vOlRhGEhG7k"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/vOlRhGEhG7k"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/7f7e7b8b-df8d-48f9-971a-fdfbd835e7ff.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">您知道嗎？<span style="font-weight: bold; ">本片還被大導演史蒂芬．史匹柏（Steven Allan Spielberg）特別推薦，點名為人生必看四大經典電影之一呢！</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
