--- a/_posts/2022-08-18-INMEDIA-初選47人案-記一次長四天的答辯-有人說笑-有人致歉.html
+++ b/_posts/2022-08-18-INMEDIA-初選47人案-記一次長四天的答辯-有人說笑-有人致歉.html
@@ -15,13 +15,13 @@ author: 獨媒報導
 <p>被問到是否同意那長139頁、超過400段的案情，有人向同案被告弓身致歉：「我希望能向全體被告致歉，因為我冇辦法確保初選合法。」有人說：「呢份案情一字一句所言甚是，係歷史嘅印記，我同意所有案情。」也有人高喊：「同意劇情！」欄內又響起了笑聲。</p>
 <p>離首提堂14個月，47人終全數交付高院，部分人排期9月和11月進行案件管理聆訊，等候審訊和判刑。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/09k13S91b5" title="無標題"><img src="https://live.staticflickr.com/65535/50099334323_e55fc39588_z.jpg" alt="無標題" /></a></p>
-<p><strong>何桂藍、梁國雄、林卓廷等18人不認罪</strong></p>
+<p><strong>何桂藍、梁國雄、林卓廷等18人擬不認罪</strong></p>
 <p>初選案去年3月1日首度提堂，經歷7次提堂、5次提訊日，控辯雙方就案件進度、控罪元素、解除87A限制等多番爭拗，國安法指定法官、主任裁判官羅德泉終將今年6月1日及2日的第6次提訊日定為死線，被告須於當天表明答辯意向，若無法做到仍會交付高院審訊。</p>
 <p><a href="https://www.inmediahk.net/node/社運/【初選47人案】何桂藍等17人終交付高院審理-戴耀廷等30人明早再訊">6月1日</a>，甫開庭控方便表明47人中，共29人認罪，18人不認罪，吳政亨則會提初級偵訊。</p>
 <p>羅德泉將被告分成三組處理，17人包括鄭達鴻、楊雪盈、彭卓棋、何啟明、劉偉聰、黃碧雲、施德來、伍健偉、何桂藍、陳志全、鄒家成、林卓廷、梁國雄、林景楠、柯耀林、李予信及余慧明均不認罪，並逐一以「Not guilty／不認罪」表示意向。</p>
 <p>劉偉聰一貫優雅說：「Not guilty, sir.」林卓廷近乎咆哮喊：「我不認罪！」梁國雄說：「無罪，不認罪。」余慧明舉起右手說：「Not guilty.」羅德泉遂將17人交付高院審訊。</p>
 <p>完成交付程序的被告獲准先離開，並向其他被告揮手道別，伍健偉搭着部分被告膊頭故作凝重說：「我走先，你哋頂住！」林卓廷離去時有人說「bye bye 阿廷」並輕拍其背，林再揮手說：「保重！端午節快樂。」何桂藍、鄒家成、余慧明等人則選擇留下。至於同樣不認罪的吳政亨，因需時決定初級偵訊爭議的議題，押後至翌日處理。</p>
-<p><strong>戴耀廷、黃之鋒等29人認罪 </strong></p>
+<p><strong>戴耀廷、黃之鋒等29人擬認罪 </strong></p>
 <p>另外29人，包括戴耀廷、區諾軒、趙家賢、鍾錦麟、袁嘉蔚、梁晃維、徐子見、岑子杰、毛孟靜、馮達浚、劉澤鋒、黃之鋒、譚文豪、李嘉達、譚得志、胡志偉、朱凱廸、張可森、黃子悅、尹兆堅、郭家麒、吳敏兒、譚凱邦、劉頴匡、楊岳橋、范國威、呂智恆、岑敖暉和王百羽，則選擇認罪。當中袁嘉蔚、馮達浚、吳敏兒、范國威和呂智恆5人未能同意全部案情。</p>
 <p><strong>馮達浚普通話說「我知錯了」 王百羽：我冇心機打冇意義嘅官司</strong></p>
 <p>眾人逐一以不同方式認罪，袁嘉蔚小聲說「認呀！」，梁晃維說「認囉！」，馮達浚先以廣東話說「我認罪」，再以普通話說「我認罪，我知錯了」，引來旁聽席發笑，郭家麒笑着向他豎起拇指。劉澤鋒剛好離庭去了廁所，有人說：「喺廁所都會認啊。」</p>
