--- a/_posts/2022-08-19-INITIUM-苏州和服事件-寻衅滋事-的警察-和中国后绩效合法性时代的保守怪圈.html
+++ b/_posts/2022-08-19-INITIUM-苏州和服事件-寻衅滋事-的警察-和中国后绩效合法性时代的保守怪圈.html
@@ -15,7 +15,7 @@ author: 贾素之
 <blockquote>
 <p>这个事件的加速和极端程度，令一向把“反日”作为动员议题的民粹意见领袖也没反应过来。</p>
 </blockquote>
-<p>警察明显越界的执法，让此事的舆论一开始就指向批评警权滥用。媒体人宋志标<a href="https://mp.weixin.qq.com/s/J5Q7zUFDEBfnz5OMrdOV2w">指出</a>，人们同情穿和服拍照的女孩，是因为对警察的执法不在法律层面而在道德规训（作为中国人应该如何）感到不安和恐惧。这件事情让许多人联想到10年前的U型锁事件，2012年，在西安的一场保钓反日游行中，21岁的青年蔡洋用U型锁击穿了一位驾驶日系车车主的头骨致其死亡。蔡洋被以故意伤害罪、寻衅滋事罪判刑10年，今年4月刚好出狱。</p>
+<p>警察明显越界的执法，让此事的舆论一开始就指向批评警权滥用。媒体人宋志标<a href="https://mp.weixin.qq.com/s/J5Q7zUFDEBfnz5OMrdOV2w">指出</a>，人们同情穿和服拍照的女孩，是因为对警察的执法不在法律层面而在道德规训（作为中国人应该如何）感到不安和恐惧。这件事情让许多人联想到10年前的U型锁事件，2012年，在西安的一场保钓反日游行中，21岁的青年蔡洋用U型锁击穿了一位驾驶日系车车主的头骨致其伤残。蔡洋被以故意伤害罪、寻衅滋事罪判刑10年，今年4月刚好出狱。</p>
 <p>有如一个苏联笑话，寻衅滋事罪10年前被用于审判越轨的“爱国者”，10年后又被警察用在穿和服的不够“爱国”的人身上。作为一项口袋罪（指适用范围极广的刑事指控），寻衅滋事罪常被用于维稳和政治指控，尽管臭名昭著，但其逻辑是用法律工具解决社会问题和政治问题。而警察对和服女孩脱口而出的定性，则是以法律之名（实际上在现有法律框架内这个警察也涉嫌滥用职权和非法拘禁）把公民的私人生活政治化——继而，所有人都是潜在的政治犯。比起一个打工者用U型锁杀日系车主，警察对和服的定性更有力坐实了政治罪的逻辑已经扩大到普通人身上。<br><br>
 这个事件的加速和极端程度，令一向把“反日”作为动员议题的民粹意见领袖也没反应过来，他们中几乎没有人表态坚定支持警察提出“穿和服涉嫌寻衅滋事”的定性。比如新晋<a href="https://theinitium.com/article/20210920-mainland-weibo-notorious-nationalists/">猎巫博主</a>“拆台CT”就说，“警察的处理方式就是简单粗暴且有问题的”。而其他以举报普通人为业的博主，也大多表示“尊重其他人在非特殊时间特殊地点穿和服的权利”、不针对8月10日穿和服的当事人，或者直接把矛头指向苏州地方政府，认为当地打造了一条日式风情街，才是首要责任人。这些一向精于政治构陷的民粹领袖的发言，甚至比当事警察理性得多。</p>
  
