--- a/_posts/2022-08-18-INITIUM-在台湾-这些人工流产的故事不能说出口.html
+++ b/_posts/2022-08-18-INITIUM-在台湾-这些人工流产的故事不能说出口.html
@@ -9,50 +9,15 @@ author: 端传媒记者 王怡蓁 发自台湾
 ---
 
 <p>「多年来，台湾年度人工流产人次屡屡高于出生人口，不开放的社会氛围却始终让人无法说出自己的经历。」</p><p>端传媒记者 王怡蓁 发自台湾</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/1d759c300adf4347a93e901aa905f6ce.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit">设计：郭瑾烨</span></figcaption></figure><p>My body my choice 台湾人工流产题</p>
-<p>甘梅还清楚记得意外怀孕的时间是在10月中，“我的生理期很准时，晚了几天我就觉得惨了，我买了两个不同厂牌的验孕棒，都是两条线。”当时28岁的她在法国游学但不谙法语，在男伴的协助下到医院进行人工流产，他们在上课地点附近找了医院。由于怀孕才五周，医生建议药物流产。</p>
-<p>原本得在医院服下药物，因为她们接下来要移动到另一座城市上课，在医生的叮咛下，甘梅在长途移动的前一天先服用第一颗药，隔天再吃第二颗。八小时的车程，她在长途车的后座躺着，渡过漫长、疼痛的流产，“身体很不舒服，每过一段时间，我就要求男伴停车，让我更换吸满血液的卫生棉。虽然痛苦，但我仍觉得人工流产对当时的我是最好的决定，也从不后悔。”留学在海外的她，当时完全没有做好生育的准备。
- 
-回台已有大概四年，甘梅从未提起人工流产一事，她不知道如何解释当时发生的状况，“更重要的是，我不想收到负面回馈。”未婚怀孕还流产，在台湾会被异样眼光看待，甘梅身边没有任何人谈论过人工流产经验，找不到有相同经验者、对性并不开放的氛围让她难以开口。</p>
+            <figcaption itemprop="caption"><span class="credit">设计：郭瑾烨</span></figcaption></figure><p>甘梅还清楚记得意外怀孕的时间是在10月中，“我的生理期很准时，晚了几天我就觉得惨了，我买了两个不同厂牌的验孕棒，都是两条线。”当时28岁的她在法国游学但不谙法语，在男伴的协助下到医院进行人工流产，他们在上课地点附近找了医院。由于怀孕才五周，医生建议药物流产。</p>
+<p>原本得在医院服下药物，因为她们接下来要移动到另一座城市上课，在医生的叮咛下，甘梅在长途移动的前一天先服用第一颗药，隔天再吃第二颗。八小时的车程，她在长途车的后座躺着，渡过漫长、疼痛的流产，“身体很不舒服，每过一段时间，我就要求男伴停车，让我更换吸满血液的卫生棉。虽然痛苦，但我仍觉得人工流产对当时的我是最好的决定，也从不后悔。”留学在海外的她，当时完全没有做好生育的准备。</p>
+<p>回台已有大概四年，甘梅从未提起人工流产一事，她不知道如何解释当时发生的状况，“更重要的是，我不想收到负面回馈。”未婚怀孕还流产，在台湾会被异样眼光看待，甘梅身边没有任何人谈论过人工流产经验，找不到有相同经验者、对性并不开放的氛围让她难以开口。</p>
 <p>33岁的贝蒂是少数愿意公开谈论人工流产经验的人，在生活或是课堂中，她认为这就是她生命的一部分，却一再收到男性的恶意评论——“妳干嘛不生下来自己养？”“就是因为妳不够坚持才会这样”“妳让我知道流产对身体会不好，我以后不会娶流产过的女人”，贝蒂逐渐噤声。</p>
  
  
  
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
  
 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
  
  
  
@@ -79,6 +44,13 @@ author: 端传媒记者 王怡蓁 发自台湾
  
  
  
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
  
  
@@ -86,9 +58,35 @@ author: 端传媒记者 王怡蓁 发自台湾
  
  
  
-<p>贝蒂是艺术史研究所学生，曾有两次人工流产经验。第一次流产后，过去成长的阴暗面随着流产的痛苦经验一口气爆发，她没办法上学。直到某堂课的男教授通知再不到课堂上就要当掉她，“他要求我出示诊断证明，却又质疑我忧郁症以及流产的证明哪里取得。他是一名上了年纪的基督徒，我回到课堂后，他每次都会提起低生育率，年轻人怀孕了还不生，目光总朝着我，这让我的忧郁症更加严重。”</p><p>除了男性的不理解，为她手术的医师也再三强调，诊所很少进行人工流产，尽量不做，意思似乎是只欢迎新生命的到来。这些话对贝蒂造成多次伤害。
- 
-端传媒记者采访四名女性的人工流产经历，她们多表示不愿公开流产经验或是曾在公开后遭遇不友善反应而噤声。台湾每年人工流产的次数多年来高于出生人口，据卫福部统计，近五年人工流产的人次约为22万，而2021年的出生人口只有15万。2016年台湾第十二次家庭与生育调查报告显示，全台20-49岁的女性曾有过人工流产的比例为17.7%，也就是五名女性就有一人曾有过人工流产经验。就算比例很高，人工流产在台湾仍似乎是只能谈论体制、权利，但很难公开述说个人经验。 </p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/6150e01eb3334772994390ee277e0225.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月24日，宜兰福隆海滩，家长与孩子嬉水。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+<p>贝蒂是艺术史研究所学生，曾有两次人工流产经验。第一次流产后，过去成长的阴暗面随着流产的痛苦经验一口气爆发，她没办法上学。直到某堂课的男教授通知再不到课堂上就要当掉她，“他要求我出示诊断证明，却又质疑我忧郁症以及流产的证明哪里取得。他是一名上了年纪的基督徒，我回到课堂后，他每次都会提起低生育率，年轻人怀孕了还不生，目光总朝着我，这让我的忧郁症更加严重。”</p><p>除了男性的不理解，为她手术的医师也再三强调，诊所很少进行人工流产，尽量不做，意思似乎是只欢迎新生命的到来。这些话对贝蒂造成多次伤害。</p><p>端传媒记者采访四名人工流产亲历者，她们多表示不愿公开流产经验或是曾在公开后遭遇不友善反应而噤声。台湾每年人工流产的次数多年来高于出生人口，据卫福部统计，近五年人工流产的人次约为22万，而2021年的出生人口只有15万。2016年台湾第十二次家庭与生育调查报告显示，全台20-49岁的女性曾有过人工流产的比例为17.7%，也就是五名女性就有一人曾有过人工流产经验。就算比例很高，人工流产在台湾仍似乎是只能谈论体制、权利，但很难公开述说个人经验。 </p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/6150e01eb3334772994390ee277e0225.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月24日，宜兰福隆海滩，家长与孩子嬉水。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption">2022年7月24日，宜兰福隆海滩，家长与孩子嬉水。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>跟前男友分手10天后，贝蒂发现自己怀孕了。“我告诉他这件事，但他不再跟我联络。后来，我在社群上看到他仍然去玩乐团、表演，我才知道被抛下了”。虽然有妹妹的陪同到诊所进行人工流产，但她仍然感到寂寞。由于怀孕还不到七周，医师告诉她，可以选择药物流产（RU486）或真空吸引手术。在诊间，她发抖着拿起第一颗药物，医护人员也紧张地盯着她服下，第二颗药物过后，血肉从她下体流出，伴随强烈副作用，让她不断上吐下泻，在马桶边边呜噎哭泣，在快要昏倒前，她打给前男友，哀求他来家里看她一眼，对方依然未现身，在她的生命中消失。</p><p>直到2018年9月，贝蒂再次发现自己有孕，当时的男友在国外工作，原本论及婚嫁，也打算生育的他们，却因为各自的职涯选择人工流产。此外，贝蒂也说出她的隐忧，长期服用身心科药物的她是否能够生出正常的孩子？妇产科医师告诉她，还无法证明胚胎会不健康，但她仍然害怕。有了第一次的经验，贝蒂要求男友回国陪她手术，却遭对方以机票太贵为由拒绝。她再一次经验一个人流产。“我后悔当时没告诉他，我好喜欢小孩，我好想要生下来”，但她深知，这两次的流产都是对当时的她最好的决定。</p><p>“我最厌恶的是我的前男友们，因为人工流产，我的人生暂停前进了一阵子，但他们没有，继续玩团、出国工作，为什么他们可以好好的？这很不公平。”贝蒂觉得那两个流产的胚胎某种形式被生出来过，只是没人见过。为此，她创作了一首诗，纪念当时的自己与两个胚胎。</p><p>〈月球背面生子〉 </p><p>哭哭嚷嚷叫叫闹闹<br>
 身体自意识中出现了撕裂的伤痕<br>
 那是位在下体的一道狭长破口
@@ -113,10 +111,9 @@ author: 端传媒记者 王怡蓁 发自台湾
 她的她口<br>
 只不断飞出许许多多<br>
 黑色的蝙蝠</p><p>原则上有罪</p><p>台湾社会默许人工流产发生，却不愿女性公开谈论人工流产经验，并以“无知”、“邪恶”刻板形象加诸女性身上，并以婴灵报复等道德论述来束缚女性。</p><p>阳明交通大学特聘教授林志洁长期关注女性议题，她认为社会充斥着对人工流产的迷思，像是流产就是杀婴、婴灵报复，而未婚者流产就会被冠上放荡、不洁，愚蠢等形象，这些迷思造成女性焦虑、不安。</p><p>她强调，迷思概念下，只会造成母婴的对立，社会似乎只在乎“胎儿”的人权，而不是女性的权利，“妈妈好，小孩才会好，但现在不是，在那么多的限制下，女性干脆不要怀孕、不要生下来。”林志洁举了《为什么要抛弃我？：日本“婴儿信箱”十年纪实》一书做例子。熊本一间民间医院，成立了“婴儿信箱”设施，收容因走投无路而遭牺牲的婴孩们。十年来，收容了一百三十个孩子。她指出，这只是提供给尚未准备好成为母亲的女性一个选项，书中也阐述了走投无路的女性在信箱附近产子，差点丧命，婴儿信箱拯救了小生命，也拯救了社会底层的弱势母亲。</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/fd42ec712e7a4e948627cf2ca852adbe.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="阳明交通大学特聘教授林志洁。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption">阳明交通大学特聘教授林志洁。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>妇产科医师乌恩慈也呼应了上述的看法，社会多从胚胎的权利出发，而不是从女性的角度看待流产。</p><p>乌恩慈指出，当妇女处在迷思中，容易导致流产后的忧郁以及创伤。目前，社会对于自然流产多抱以同情，女性也比较愿意谈论自然流产的经验，不过，乌恩慈认为，过去对于自然流产也有很深的负面印象，把这些流产的女性贴上“体弱、不小心”等标签。
-比较愿以谈论人工流产经验的多是已婚且生育过孩子的妇女，乌恩慈说：“她们会强调，已生够多了。她们愿意谈论流产经验，一部分也代表着自己还有生殖能力。”</p><p>“台湾长期形成的氛围是可以做（人工流产），但不要说。”乌恩慈认为，无论是在人口控制的背景下，还是过去重男轻女观念，民间早已普遍存在人工流产的事实，但没人愿意正视。早在1984年优生保健法让人工流产合法化之前，纵使进行人工流产的女性以及医师可能触犯刑法的堕胎罪，但仍存在这个事实，优生保健法的立法目的正是为此考量，在医生团体、妇女团体的呼吁下，让人工流产合法化。</p><p>根据刑法288条规定：怀胎妇女服药或以他法堕胎者，处六月以下有期徒刑、拘役或三千元以下罚金。怀胎妇女听从他人堕胎者，亦同。因疾病或其他防止生命上危险之必要，而犯前二项之罪者，免除其刑。</p><p>政府试图为人工流产合法化，而这主因在于不断上升的人口，为了控制人口增长、妇女的健康、人权及合法的医疗行为等因素，制定优生保健法。林志洁指出“优生保健法”的“优生”名称大有问题，未来可能会调整为“生育保健法”，避免争议。虽然优生保健法不是为了女性自主权而立法，但一定程度上仍保障了合法人工流产。</p><p>是否能将人工流产除罪？林志洁认为必须朝除罪化前进，不过，妇女团体也担心，提出除罪化将给予反堕胎团体舞台，届时，又会像2019、2020年的公投提案那样，妇团也担心，保守势力因着美国推翻罗诉韦德案为基础，限缩台湾合法的人工流产条件。</p><p>或是如美国的TRAP LAWS（the targeted regulation of abortion providers），是地方针对人工流产医疗院所的各种限制，像是两次服用药物都需要在医师的监督下，由于服药至少间隔24小时，因此会增加妇女及医院的成本，另外则是透过立法提高医疗院所的软硬体设备。这些措施实质上就是要达到架空生育自主权的目的。</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b24684b16679485d8d0dea7b94a5e1f8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月3日，马萨诸塞州波士顿的抗议活动中，一名示威者将她的手伸向空中。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">阳明交通大学特聘教授林志洁。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>妇产科医师乌恩慈也呼应了上述的看法，社会多从胚胎的权利出发，而不是从女性的角度看待流产。</p><p>乌恩慈指出，当妇女处在迷思中，容易导致流产后的忧郁以及创伤。目前，社会对于自然流产多抱以同情，女性也比较愿意谈论自然流产的经验，不过，乌恩慈认为，过去对于自然流产也有很深的负面印象，把这些流产的女性贴上“体弱、不小心”等标签。</p><p>比较愿以谈论人工流产经验的多是已婚且生育过孩子的妇女，乌恩慈说：“她们会强调，已生够多了。她们愿意谈论流产经验，一部分也代表着自己还有生殖能力。”</p><p>“台湾长期形成的氛围是可以做（人工流产），但不要说。”乌恩慈认为，无论是在人口控制的背景下，还是过去重男轻女观念，民间早已普遍存在人工流产的事实，但没人愿意正视。早在1984年优生保健法让人工流产合法化之前，纵使进行人工流产的女性以及医师可能触犯刑法的堕胎罪，但仍存在这个事实，优生保健法的立法目的正是为此考量，在医生团体、妇女团体的呼吁下，让人工流产合法化。</p><p>根据刑法288条规定：怀胎妇女服药或以他法堕胎者，处六月以下有期徒刑、拘役或三千元以下罚金。怀胎妇女听从他人堕胎者，亦同。因疾病或其他防止生命上危险之必要，而犯前二项之罪者，免除其刑。</p><p>政府试图为人工流产合法化，而这主因在于不断上升的人口，为了控制人口增长、妇女的健康、人权及合法的医疗行为等因素，制定优生保健法。林志洁指出“优生保健法”的“优生”名称大有问题，未来可能会调整为“生育保健法”，避免争议。虽然优生保健法不是为了女性自主权而立法，但一定程度上仍保障了合法人工流产。</p><p>是否能将人工流产除罪？林志洁认为必须朝除罪化前进，不过，妇女团体也担心，提出除罪化将给予反堕胎团体舞台，届时，又会像2019、2020年的公投提案那样，妇团也担心，保守势力因着美国推翻罗诉韦德案为基础，限缩台湾合法的人工流产条件。</p><p>或是如美国的TRAP LAWS（the targeted regulation of abortion providers），是地方针对人工流产医疗院所的各种限制，像是两次服用药物都需要在医师的监督下，由于服药至少间隔24小时，因此会增加妇女及医院的成本，另外则是透过立法提高医疗院所的软硬体设备。这些措施实质上就是要达到架空生育自主权的目的。</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b24684b16679485d8d0dea7b94a5e1f8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月3日，马萨诸塞州波士顿的抗议活动中，一名示威者将她的手伸向空中。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption">2022年5月3日，马萨诸塞州波士顿的抗议活动中，一名示威者将她的手伸向空中。<span class="credit">摄：Jessica Rinaldi/The Boston Globe via Getty Images</span></figcaption><p></p><p>抗拒母亲身分与无声的复仇</p><p>42岁的妍珊是一名社运人士，经历过五次的人工流产及一次的自然流产。第一次发生在刚满20岁不久的冬天，由于怀孕周数已超过七周，得进行手术才能流产。她回忆起久远的手术经验，甚至有些余悸犹存。“引产后，要塞一块纱布在阴道，隔一周再取出纱布，非常疼痛。那时遇到圣诞节，我还塞着纱布到阳明山跟朋友过节，我又冷又痛，却无法对其他人述说。”</p><p>手术后的妍珊在回宿舍前捡到了一只幼猫，救起没多久猫就死亡，她埋葬了猫，却不知道死去的胚胎在哪里，“那时还很年轻，也是第一次，所以看到小猫，想到流掉的孩子，特别感伤吧。”</p><p>第二次则发现得早，她选择了药物流产。以药物将血肉排出的剧痛感与手术不同，药物让下体收缩、出血，非常疼痛，妍珊的男友曾问她那是什么感觉？她只能形容像剧烈拉肚子，但仍是差距甚远。</p><p>第三次则是她最痛苦的经验，妍珊被后来成为丈夫的男友怀疑腹中的胎儿是谁的，躺在手术台上的她，流出眼泪。虽然男友在她身旁，却不在乎她的感受。问及流产的原因，妍珊说，前两次是因为还有学生身分，第三次，则是因为工作，“我当时获得一份很想要的工作，不想因为生孩子影响人生规划。”</p><p>后来的一次怀孕，是她唯一一次犹豫是否生育，不过，老天爷先帮她做出了决定，由于胚胎不稳，在一个月左右，开始不断出血，医师说这个胚胎不太稳定可能会自然淘汰。犹豫、恐惧，她还是继续原本的过劳工作。怀孕到五周大时，她与朋友们约在阳明山聚餐，刚用完晚餐回到旅馆，她又开始出血，这次，不只是血液，还流出了白色的组织，她的孕期终止了。</p><p>她与男友结婚，婚后第一次受孕，她仍决定流掉。“我被医护人员告知，需要取得『配偶同意』才能流产，我非常惊讶，怎么会这样？但也只能回去取得他的身分证以及签名，再回诊所进行药物流产。”最后一次的流产则是三年前，她选择手术流产。</p><p>大多数已婚女性到了诊间才知道人工流产需要取得配偶同意。乌恩慈说：“大部分的女性就是震惊，脱口而出『怎么那么麻烦』，再想办法取得先生同意，或请先生到医院签署同意书”，她也曾遇过，少数已知晓的妇女若难以取得配偶同意，则会私下要求在体内装设避孕器。</p><p>不过，在诊间，也会看到一些怀孕妇女有难言之隐，有些人被家暴，即将离婚，或是她外遇，这些都很难取得配偶的同意进行人工流产。另外，则有些女性的丈夫不在台湾，可能在外地工作或是她是外籍移工，也会难以取得丈夫的同意书。那该怎么办？乌恩慈表示，她所属的医院是大型妇产科医院，如果未取得配偶同意就进行人工流产，将会面临法律责任，因此医师会建议这些女性转往小型诊所寻求帮助。</p><p>根据记者调查，民间确实有合法的小型诊所为这些难以取得配偶同意的女性进行人工流产，这些医疗院所私下坦言，如果政府不细查就不会有事。</p><p>反对修订配偶同意的意见认为，先生在怀孕一事上也出了一份力，不应该排除配偶的意见。林志洁认为：“出一分力？确实，可能就好比一层楼与喜马拉雅山，我这么形容好了，男性与女性就好像只买一股的股民以及一万股的股民，只买一股的人却要求一样的红利？理性上，大家都觉得不对吧。”在这个问题上，乌恩慈反问：“身体、子宫是谁的？生育风险谁承担？所以女性才应该拥有最终的决定权。”</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/f1eb43fb6a9e4ce09d7eca5419f96183.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="妇产科医师乌恩慈。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption">妇产科医师乌恩慈。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>经历这么多次的流产背后的部分原因是妍珊透过伤害身体来报复母亲。“我跟妈妈的关系很紧张，她很希望我生孩子，我偏不要，我不要照她的意思做”问及母亲是否知晓？她摇了摇头，无声地伤害自己是对妈妈终极的报复，透过疼痛释放心里的痛苦。</p><p>妍珊继续阐述她沉重的心理因素，对生育的恐惧来自从女体转变为母体的过程，可能会失去对身体的掌控，也担心身体不再具吸引力？而健康的胎儿能够保证产后是健康的吗？这样的担忧其有来自，妍珊的兄长在胎儿时期并无异状，产后却患有脑性麻痺，“我妈生我是为了照顾我哥哥，我一辈子都是照顾者的身分，我真的很怕我的孩子也是那样。”</p><p>妍珊很清楚知道，每一次的决定都是她主动做出，握有对身体的自主权。那男伴们的看法呢？妍珊叹气道，身体不是他们的，根本不期待他们理解，他们也无法理解。妍珊在后期的流产前，甚至一个人备好约莫一周的粮食，让自己在流产后待在屋内休息。</p><p>不过，她鲜少说出流产经验，因为她清楚知道台湾社会对主动选择人工流产的女性有多不友善，她所谓的社会压力，在她学生时期是更加的明显，只要有年轻人未婚同居，就会被议论，过节后，新闻也会以“堕胎潮”来报导流产现象。“我不想被标签，也不想成为弱势。我知道自己不是坏女人，只是生育涉及了我很深沉、复杂的心理状态。”</p><p>乌恩慈长期在乌乌医师粉丝专页为大众宣导正确医学知识，“在医学上，怀孕满20周才会称为胎儿，在那之前都是胚胎”，担任10多年医师后，她在用词上也显得小心，以往刚怀孕就会跟对方说，恭喜成为妈妈，但现在，她知道并不是所有人都欣喜地怀孕，因此她选择以对方的姓名及胚胎来代称。</p><p>在正确的医学观念上，乌恩慈强调，社会的迷思强化人工流产的严重性，像是伤身体、不孕，实际上，怀孕比起人工流产更加伤害负妇女的身体。</p><p>这些误解导致我们看不到流产女性的真实样貌。乌恩慈表示，有避孕失败、错误避孕等错误认知的案例。许多不易怀孕或年纪稍长的女性以为自己不会怀孕了，便不再避孕。她也曾帮年长女医师看诊，那名女医师认为，年纪大了不可能再怀上而疏忽。“这些人都不是无知、年少的女性，反而是年长的高知识分子。”乌恩慈强调，台湾性教育还是做得不足，每个人必须认知到“避孕不是百分之百成功”，况且也不是所有有性行为的人都正确避孕。</p><p>记者在采访时也发现，受访者在怀孕前，不一定具备正确的避孕知识。甘梅曾以为体外射精就不会怀孕，其他人也曾服用过事前、事后的避孕药，以为万无一失，却还是怀孕。</p><p>那时20多岁的林志洁已是律师，她抱持著有备无患的念头，在体内装了避孕器。没想到，第二年避孕器就失去效果。“一开始是月经晚来，我怀疑怀孕，第一次验孕没有，过了两周验孕也没有，但月经还是没来，在医院才确认怀孕”。医师告诉她，避孕器有三年的效期，但可能她身体吸收力太好，避孕器的铜离子被身体吸收，医师观察后认为胚胎发展可能有问题。林志洁指出，即使胚胎没有问题，她也要出国攻读博士班，因而接受人工流产手术。</p><p>“当时的想法，就是我再怎么有意识、准备还是遇到了，我不是刻板印象形容的无知少女，却还是避孕失败。既然遇上了，就处理。”林志洁心平气和地描述当时的心境与决策。她婚后对先生提起这件事，先生对她说，“妳可以不用告诉我这件事，但既然妳愿意告诉我，我很愿意倾听”记者问到先生的反应，林志洁反问，要有什么反应？“我很看重生育自主权，无论男女都是，不过我们的法规，却限制男性与女性的生育自主权，像是婚后才能结扎、婚后才能取出冷冻的卵子等，台湾没有生育自主，只有『优生』。”</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/d6e2fab975b04da3872c9b8263d9c90d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月17日，台北捷运内乘客走上车箱。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">妇产科医师乌恩慈。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>经历这么多次的流产背后的部分原因是妍珊透过伤害身体来报复母亲。“我跟妈妈的关系很紧张，她很希望我生孩子，我偏不要，我不要照她的意思做”问及母亲是否知晓？她摇了摇头，无声地伤害自己是对妈妈终极的报复，透过疼痛释放心里的痛苦。</p><p>妍珊继续阐述她沉重的心理因素，对生育的恐惧来自从女体转变为母体的过程，可能会失去对身体的掌控，也担心身体不再具吸引力？而健康的胎儿能够保证产后是健康的吗？这样的担忧其来有自，妍珊的兄长在胎儿时期并无异状，产后却患有脑性麻痺，“我妈生我是为了照顾我哥哥，我一辈子都是照顾者的身分，我真的很怕我的孩子也是那样。”</p><p>妍珊很清楚知道，每一次的决定都是她主动做出，握有对身体的自主权。那男伴们的看法呢？妍珊叹气道，身体不是他们的，根本不期待他们理解，他们也无法理解。妍珊在后期的流产前，甚至一个人备好约莫一周的粮食，让自己在流产后待在屋内休息。</p><p>不过，她鲜少说出流产经验，因为她清楚知道台湾社会对主动选择人工流产的女性有多不友善，她所谓的社会压力，在她学生时期是更加的明显，只要有年轻人未婚同居，就会被议论，过节后，新闻也会以“堕胎潮”来报导流产现象。“我不想被标签，也不想成为弱势。我知道自己不是坏女人，只是生育涉及了我很深沉、复杂的心理状态。”</p><p>乌恩慈长期在乌乌医师粉丝专页为大众宣导正确医学知识，“在医学上，怀孕满20周才会称为胎儿，在那之前都是胚胎”，担任10多年医师后，她在用词上也显得小心，以往刚怀孕就会跟对方说，恭喜成为妈妈，但现在，她知道并不是所有人都欣喜地怀孕，因此她选择以对方的姓名及胚胎来代称。</p><p>在正确的医学观念上，乌恩慈强调，社会的迷思强化人工流产的严重性，像是伤身体、不孕，实际上，怀孕比起人工流产更加伤害负妇女的身体。</p><p>这些误解导致我们看不到流产女性的真实样貌。乌恩慈表示，有避孕失败、错误避孕等错误认知的案例。许多不易怀孕或年纪稍长的女性以为自己不会怀孕了，便不再避孕。她也曾帮年长女医师看诊，那名女医师认为，年纪大了不可能再怀上而疏忽。“这些人都不是无知、年少的女性，反而是年长的高知识分子。”乌恩慈强调，台湾性教育还是做得不足，每个人必须认知到“避孕不是百分之百成功”，况且也不是所有有性行为的人都正确避孕。</p><p>记者在采访时也发现，受访者在怀孕前，不一定具备正确的避孕知识。甘梅曾以为体外射精就不会怀孕，其他人也曾服用过事前、事后的避孕药，以为万无一失，却还是怀孕。</p><p>那时20多岁的林志洁已是律师，她抱持著有备无患的念头，在体内装了避孕器。没想到，第二年避孕器就失去效果。“一开始是月经晚来，我怀疑怀孕，第一次验孕没有，过了两周验孕也没有，但月经还是没来，在医院才确认怀孕”。医师告诉她，避孕器有三年的效期，但可能她身体吸收力太好，避孕器的铜离子被身体吸收，医师观察后认为胚胎发展可能有问题。林志洁指出，即使胚胎没有问题，她也要出国攻读博士班，因而接受人工流产手术。</p><p>“当时的想法，就是我再怎么有意识、准备还是遇到了，我不是刻板印象形容的无知少女，却还是避孕失败。既然遇上了，就处理。”林志洁心平气和地描述当时的心境与决策。她婚后对先生提起这件事，先生对她说，“妳可以不用告诉我这件事，但既然妳愿意告诉我，我很愿意倾听”记者问到先生的反应，林志洁反问，要有什么反应？“我很看重生育自主权，无论男女都是，不过我们的法规，却限制男性与女性的生育自主权，像是婚后才能结扎、婚后才能取出冷冻的卵子等，台湾没有生育自主，只有『优生』。”</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/d6e2fab975b04da3872c9b8263d9c90d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月17日，台北捷运内乘客走上车箱。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption">2022年8月17日，台北捷运内乘客走上车箱。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>纵使乌恩慈已对于生育议题十分友善，她仍反省从医之初的偏见，“刚当医生时，还没看到那么多的挣扎与困境，我心里会质疑：为什么不生下来？”当她投入推广正确医疗知识，许多难以被言说的个人经验涌入她的粉专里，抒发个人遭遇的痛苦。</p><p>乌恩慈强调：“每名女性来到诊间进行人工流产的理由都不同，但她们不是『无知的女人』，不是因为被谁教唆，而是深思熟虑后的决策，纵使不能够完全理解，我们得尊重她们的决定。”
  </p><p>非二元性别者的流产</p><p>31岁的律师李翎玮是一名非二元性别认同者，他也曾将个人经验发表在社群上，内容并无涉及前男友的姓名等个资，却还是遭到对方来信要求修改内容。“我收到信后很不舒服，他认为这是我个人的事情，但一个人怎么怀孕？他的行为就是亲密关系中的暴力。”</p><p>2014年12月，在一次不安全的性行为后，李翎玮发现月经晚了两天还没来，当时他正参加一个禅修课程，不能外出也无法使用手机。出关后，他面临了两个人生重大的事情，一件是律师特考放榜，另一件则是可能怀孕。揣着紧张的心情，他先是用手机拿榜单，考上了。接着买验孕棒验孕，中了。才24岁的他想着自己有没有能力生下孩子并养育。另一个想法，则是来自法律层面的考量，他先松了一口气，还好没有婚姻关系，他可以不需配偶同意，独自做决定。</p><p>李翎玮告诉男友后，他们谘询许多长辈与朋友的意见，其中包含已婚育有孩子的夫妻、指导教授、双方父母，其中有支持他们生下孩子的意见，也有人要他自己做出决定。最后，李翎玮很确定，他才是唯一可以为自己决定的人。</p><p>“我当时与男友是开放式关系，怀孕后，我们跟第三个人坐下来聊，后来他们独处了一个小时深谈，我在外头非常焦虑，难以忍受，那个时候，我就知道无法在那样的状态下养育孩子，所以决定要终止怀孕。”李翎玮从怀孕、谘询到作出决定也花了八周的时间，过程中，他十分积极地思考各种可能。</p><p>怀孕、思考八周到底是短或长？2019年时由宗教团体“Shofar转化社区联盟”理事长彭迦智领衔提出的“心跳法案”公投提案，要求实施人工流产必须要在怀孕八周内实施才合法。李翎玮以自身经验强调，短时间要做决定不容易，却被反堕胎团体提案入法。</p><p></p><h3>“心跳法案”公投提案</h3><figcaption>“Shofar转化社区联盟”理事长彭迦智领衔提出的“心跳法案”公投提案内容为修改优生保健法细则，主张“胚胎就是人，人工流产等于杀人”为理由，提出实施人工流产必须要在怀孕八周内实施才合法。提案引起轩然大波，许多妇产科医师指出，八周内难以检查出胚胎异常，无疑是对怀孕女性的伤害。实际上，许多妇女直到8周可能都还不知道自己怀孕。当年举办听证会后，中央选举委员会要求提案人补正争点，却在期限内未收到，因此驳回提案。前案遭驳回后，2020年再度提案，要求优生保健法中加强谘商制度，需要六天思考期才能进行人工流产。</figcaption><p></p><p>李翎玮决策的前后都未受到社会压力与宗教的负面影响，而男友也给予温暖的支持，“我们的关系虽然很不稳定，但他确实付出很多，一直陪伴我。他手头不宽裕，还是帮我订了月子餐。”不过，身体的痛苦让李翎玮不免埋怨，“说实话，他没少做什么，但我还是恨他，他一点都无法分担我身体上的痛苦，真的很痛，这件事就是亏欠我。”</p><p>谈到性别认同，李翎玮在2018年以前都处在困惑当中。成长阶段的她长得中性，但她仍认为自己是顺性别女性，“我觉得自己是顺性别女性，也喜欢男生，却在求学阶段老是被女生告白”，后来她尝试女性化的打扮，笑称试着让自己“销出去”。而口中这名男友就是她第一任正式交往的对象。“他其实一直鼓励我，称赞我很漂亮，要有自信”，虽然对于留长发、穿裙子不感到讨厌，但他对于成为别人的“女朋友”有意见，“我当时不知道哪里怪，有好多的不适梗在喉咙，直到2018年，我无意间看到非二元性别认同的介绍，突然像被雷打到一样，我就是非二元性别者。”</p><p>李翎玮强调：“人工流产与人生规划有关，但反对人工流产的意见却是想排除生理女性的人生规划，并认为『生育』才是有子宫者最重要的人生目标。”</p><p>身为非二元性别的他还会想要生育吗？他毫不犹豫地回答了会，不过现实总是艰难，台湾的法规对于单身生育并不友善，尤其人工生殖法规定，只有夫妻能够进行人工生殖，女性冷冻的卵子也只能在婚姻状态下使用。李翎玮叹道：“在台湾，生与不生都处处受阻。”</p><p><a class="image" href="https://theinitium.com/article/20220819-taiwan-abortion-freedom-socialclimate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/f8ebdf2a3f23482aa4e319e15f3cc361.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月17日，台北象山。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            </p><figcaption itemprop="caption">2022年8月17日，台北象山。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>我们有过挣扎、痛苦</p><p>无论是甫满20岁的女性因学生身分、难以扶养孩子而进行人工流产；还是出社会后的女性，在职涯与人母中间犹豫，最后仍以个人职涯为重。或是更深的心理因素：还没准备好成为母亲、担心孩子的发展、原生家庭母女的亲密关系问题。每一名受访的女性无不庆幸自己年满20岁才怀孕，可以自行做决定，虽然经历身体与心理上的痛苦，但她们仍认为“不后悔进行人工流产，也是最好的选择。”</p><p>乌恩慈说，国家政策、反堕胎势力把少子化与人工流产做错误归因，但人工流产是女性个人的决定。台湾确实面临少子化问题，但提升生育率不应透过限制生育权来达到目标。林志洁强调，给予女性更多的支持，才能让她们安心的生育。</p><p>所有受访者皆认同，“这些故事必须被述说，才能让其他女性知道自己不孤单，她们有所选择，现在台湾的医疗很进步，可以到安全的医疗院所进行人工流产。”</p><p>甘梅回想起多年前的流产经验，她很庆幸在法国发生，享有免费的医疗资源，医师非常友善，不下任何价值判断，只问了确定要进行了吗？接着开始说明服药过程并安慰担惊受怕的甘梅。</p><p>“如果有一天台湾步上美国的脚步，限缩人工流产，我真的会很生气，那些不相干的人为什么可以干涉我的子宫？”</p><p>（尊重受访者意愿，甘梅、妍珊为化名）</p>
+            </p><figcaption itemprop="caption">2022年8月17日，台北象山。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>我们有过挣扎、痛苦</p><p>无论是甫满20岁的女性因学生身分、难以扶养孩子而进行人工流产；还是出社会后的女性，在职涯与人母中间犹豫，最后仍以个人职涯为重。或是更深的心理因素：还没准备好成为母亲、担心孩子的发展、原生家庭母女的亲密关系问题。每一名受访者无不庆幸自己年满20岁才怀孕，可以自行做决定，虽然经历身体与心理上的痛苦，但她们仍认为“不后悔进行人工流产，也是最好的选择。”</p><p>乌恩慈说，国家政策、反堕胎势力把少子化与人工流产做错误归因，但人工流产是女性个人的决定。台湾确实面临少子化问题，但提升生育率不应透过限制生育权来达到目标。林志洁强调，给予女性更多的支持，才能让她们安心的生育。</p><p>所有受访者皆认同，“这些故事必须被述说，才能让其他女性知道自己不孤单，她们有所选择，现在台湾的医疗很进步，可以到安全的医疗院所进行人工流产。”</p><p>甘梅回想起多年前的流产经验，她很庆幸在法国发生，享有免费的医疗资源，医师非常友善，不下任何价值判断，只问了确定要进行了吗？接着开始说明服药过程并安慰担惊受怕的甘梅。</p><p>“如果有一天台湾步上美国的脚步，限缩人工流产，我真的会很生气，那些不相干的人为什么可以干涉我的子宫？”</p><p>（尊重受访者意愿，甘梅、妍珊为化名）</p>
