--- a/_posts/2022-08-19-INMEDIA-前記者利君雅傳定居加拿大-李梓敬批-自己攞嚟.html
+++ b/_posts/2022-08-19-INMEDIA-前記者利君雅傳定居加拿大-李梓敬批-自己攞嚟.html
@@ -10,6 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/%E6%9D%8E%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>有報導指，前港台記者利君雅已離港，及或會在加拿大定居。新民黨立法會議員李梓敬日前拍片，批評對方要遠走加拿大屬「自己攞嚟」：「香港係世界上面其中一個新聞最自由嘅地方！講乜嘢都得呀！特首俾你班咁樣嘅記者質問都得啦！但係利君雅無好好珍惜，玩到過晒火位，最終咪俾人踢走囉！」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7z3t7485cQ" title="螢幕快照 2022-08-19 上午10.39.49"><img src="https://live.staticflickr.com/65535/52295661889_f2d39851db_b.jpg" width="1024" alt="螢幕快照 2022-08-19 上午10.39.49" /></a><br /><em>截自「KOLHK 時事梓引」</em></p>
+<p>不過利君雅已離港的消息，並未獲確認。</p>
 <p><strong>不獲港台續約  李梓敬斥利為討好「小黃人」<strong></strong></strong></p>
 <p>巴基斯坦裔的利君雅曾先後任職《無綫新聞》、《明報》和《香港電台》，是首名非華裔中文新聞記者。在任職港台期間，利君雅任職助理節目主任和節目《視點31》的主持，在2019年反修例期間曾多次在記者會質問官員和警方，以敢言見稱。</p>
 <p>港台其後接獲多宗涉及利君雅的投訴，她原定在2020年10月便滿三年試用期，轉為公務員合約，但兩度遭港台延長試用期，最後更不獲續約，至2021年5月離職。</p>
