--- a/_posts/2022-08-20-PQ-軟實力天平的兩端-美國和中國贏得人心之戰.html
+++ b/_posts/2022-08-20-PQ-軟實力天平的兩端-美國和中國贏得人心之戰.html
@@ -20,7 +20,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1.jpg" alt="" class="wp-image-111807" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1-300x210.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1-768x538.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>美國傳統文化及流行文化象徵<br>圖／Legends of America／報呱製圖</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1.jpg" alt="" class="wp-image-111807" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1-300x210.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/136cc7a2-ussymbols-8x11-1-768x538.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>美國傳統文化及流行文化象徵<br>圖／Legends of America／報呱製圖</figcaption></figure></div>
 
 
 
