--- a/_posts/2022-08-19-INITIUM-写给当时的你-一-每一天-该怎么过.html
+++ b/_posts/2022-08-19-INITIUM-写给当时的你-一-每一天-该怎么过.html
@@ -53,7 +53,7 @@ author: 端传媒编辑部
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220820-7th-year-letter-to-the-past/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/11/f841b1b53e3645cbba6726d29505dd76.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年10月3日，香港，参观者在艺术展上体验艺术装置。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2021年10月3日，香港，参观者在艺术展上体验艺术装置。<span class="credit">摄：Lam Yik/Bloomberg via Getty Images</span></figcaption></figure>
 
-<p>回到具体的生存及生存策略的困境，你们的提问都很有价值，我们也必须看到，这是一种共享的困境，无论是什么地域、什么年代的人，都没有离开过这些存在危机。在这里和大家分享三篇对谈文章，它们纪录了中港台当代人一致的困惑：威权时代要如何过活？躺平是什么，一定要往前走吗？我们该如何看待政治、和被政治定义的自己？最后，对抗专制，多元和真诚为何重要，这个社会还有多少被低估了的框架和价值呈现？</p>
+<p>回到具体的生存及生存策略的困境，你们的提问都很有价值，我们也必须看到，这是一种共享的困境，无论是什么地域、什么年代的人，都没有离开过这些存在危机。在这里和大家分享三篇对谈文章，它们纪录了中港台当代人一致的困惑：<a href="https://theinitium.com/article/20210604-mainland-hongkong-youtuh-conversation/">威权时代要如何过活？</a><a href="https://theinitium.com/article/20210903-mainland-lay-down-mainland-taiwan/">躺平是什么，一定要往前走吗？</a><a href="https://theinitium.com/article/20211015-opinion-hk-china-activist-talk/">我们该如何看待政治、和被政治定义的自己？</a>最后，<a href="https://theinitium.com/article/20220608-opinion-talk-everything-everywhere-allatonce/">对抗专制，多元和真诚为何重要，这个社会还有多少被低估了的框架和价值呈现？</a></p>
 <p>一起活出真我，让真我改变社会吧。</p>
 <p><strong>——一想到“人类”就想闭关的编辑F</strong></p>
 <blockquote>
