--- a/_posts/2022-08-20-PQ-數位中介服務法-資訊限制令引爭議-蘇貞昌喊停-加強溝通-完善政策.html
+++ b/_posts/2022-08-20-PQ-數位中介服務法-資訊限制令引爭議-蘇貞昌喊停-加強溝通-完善政策.html
@@ -24,7 +24,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995.jpeg" alt="" class="wp-image-106739" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995-768x576.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>NCC提出的《數位中介服務法》草案，針對臉書、Youtube等網路服務平台，全部將納入管制對象。<br>（圖／NCC提供）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995.jpeg" alt="" class="wp-image-106739" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b39196b5-2000x1500_0475211854995-768x576.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>NCC提出的《數位中介服務法》草案，針對臉書、Youtube等網路服務平台，全部將納入管制對象。<br>（圖／NCC提供）</figcaption></figure></div>
 
 
 
