--- a/_posts/2022-08-20-INMEDIA-安永佳加盟中甲廣西平果哈嘹-傑志稱曾收三次離隊要求.html
+++ b/_posts/2022-08-20-INMEDIA-安永佳加盟中甲廣西平果哈嘹-傑志稱曾收三次離隊要求.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20220820o.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>效力傑志的港足前鋒安永佳，將轉投中甲廣西平果哈嘹。傑志會長伍健今日出席「港超聯賽會」季前記者招待會證實消息，稱對方曾提出三次離隊要求，並透露傑志將獲得轉會費，「但唔多啦」。</p>
+<img src="https://www.inmediahk.net/files/column_images/20220820o.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>效力傑志的港足前鋒安永佳，將轉投中甲廣西平果哈嘹。傑志會長伍健今日出席「<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%B8%AF%E8%B6%85%E8%81%AF%E8%B3%BD%E6%9C%83%E8%A8%AD%E4%B8%89%E5%B9%B4%E8%A9%A6%E8%BE%A6%E6%9C%9F%E6%8E%A8%E7%94%A2%E6%A5%AD%E5%8C%96-%E4%B9%9D%E6%94%AF%E7%90%83%E9%9A%8A%E5%B9%B3%E5%88%86%E9%96%80%E7%A5%A8%E6%94%B6%E5%85%A5">港超聯賽會</a>」季前記者招待會證實消息，稱對方曾提出三次離隊要求，並透露傑志將獲得轉會費，「但唔多啦」。</p>
 <p>伍健下午出席「港超聯賽會」記者會，記者在會後問到球隊的轉會情況，包括當時得令的安永佳。伍健表明安永佳三度要求離隊，已不欲留在傑志，話中有話稱：「佢自小已經喺傑志受訓，情況有啲似李毅凱，想離隊嗰陣好似個怨婦，唔開心留低就無意思啦。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/h55MHP28Wy" title="無標題"><img src="https://live.staticflickr.com/65535/52210159742_502d52a469_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>安永佳在昨日的亞冠賽事中亦沒有上陣。在今午記者會後，傑志發新聞稿，指安永佳早前「第三次提出轉會要求」，同意其離隊，並感謝他對球隊的付出</p>
