Update VOCUS 2022-08-22 patch

--- a/_posts/2022-08-21-VOCUS-紅翻泰國拳壇的日系小鮮肉-kota.html
+++ b/_posts/2022-08-21-VOCUS-紅翻泰國拳壇的日系小鮮肉-kota.html
@@ -8,7 +8,6 @@ tags: blog
 author: 泰太
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">〈Rajadamnern Muay Thai Stadium〉位於泰國曼谷的泰拳體育館，已有77年的歷史，舉辦過無數次國際性的泰拳比賽，是一個相當有指標性的場地。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">RWS (Rajadamnern World Series) 泰拳世錦賽</span>目前正在火熱開打中，在8月19號中所出現的某場對決更是掀起了陣陣高潮，讓人臉紅心跳又小鹿亂撞。</div>
 <blockquote class="draft-block draft--blockquote">是誰 在敲打我窗 ~~~<br>是誰 在撩動琴弦 ~~~</blockquote>
@@ -35,8 +34,7 @@ author: 泰太
 <blockquote class="draft-block draft--blockquote">好的，順手附上Instagram<span style="font-weight: bold; "> </span><a href="https://www.instagram.com/kota_miura_official/" target="_blank" class="draft--a"><span style="font-weight: bold; ">kota_miura_official</span></a>，提供給想看的朋友。</blockquote>
 <blockquote class="draft-block draft--blockquote">臉書官網<a href="https://www.facebook.com/rwsmuaythai" target="_blank" class="draft--a"> RWS-<span style="font-weight: bold; ">Rajadamnern World Series</span></a></blockquote>
 <blockquote class="draft-block draft--blockquote">精采對決的影片在此↓</blockquote>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/iKGZKxyrb0M"></div>
-<div class="draft-block draft--p left"> </div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/iKGZKxyrb0M"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/cb2c3bb6-53b2-4322-9233-a6ed1f156a7c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ee3f5e5e-24ce-4966-8d7a-ddbc82d20607.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/c6c8d0ba-d164-4747-91c6-ce1f1fd2e690.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
@@ -44,6 +42,3 @@ author: 泰太
 <blockquote class="draft-block draft--blockquote">Past <a href="https://open.firstory.me/user/taicountry/platforms" target="_blank" class="draft--a">泰太太想說</a><br>Instargram <a href="https://www.instagram.com/taicountry/" target="_blank" class="draft--a">@taicountry</a></blockquote>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">底下拍拍手，輕鬆支持我↓</span></div>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/84892cab-47a4-4c6e-8b59-bd502929ae4f.gif"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
