--- a/_posts/2022-08-20-PQ-大巨蛋案-運動賽事是什麼-柯文哲怒嗆議員-那麼厲害-你定義看看.html
+++ b/_posts/2022-08-20-PQ-大巨蛋案-運動賽事是什麼-柯文哲怒嗆議員-那麼厲害-你定義看看.html
@@ -21,7 +21,7 @@ author: 麥聊
 <figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/931a9cb3-台北市長柯文哲。圖／中央社.jpg" alt="" class="wp-image-109301" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/931a9cb3-台北市長柯文哲。圖／中央社.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/931a9cb3-台北市長柯文哲。圖／中央社-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/931a9cb3-台北市長柯文哲。圖／中央社-768x432.jpg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>台北市長柯文哲反批，本來就可以舉辦運動賽事，有什麼好保證的？<br />（圖／中央社）</figcaption></figure>
 </div>
 <h2>不清楚「運動賽事」？柯文哲嗆：那麼厲害、你定義看看</h2>
-<p>柯文哲市長信誓旦旦「可以舉辦運動賽事」，但台北市議員苗博雅對此相當質疑。苗博雅說明，當初遠雄建設得標大巨案一案，是因為投資計畫書承諾體育活動超過 50 %。至於附設的百貨影城與商辦，是為了支持投資計畫書承諾的體育活動，讓遠雄賺錢。<strong>而且，正因為當初承諾體育活動超過 50 %，所以才順利以「體育館」名義取得建照，順利復工。</strong></p>
+<p>柯文哲市長信誓旦旦「可以舉辦運動賽事」，但台北市議員苗博雅對此相當質疑。苗博雅說明，當初遠雄建設得標大巨蛋案，是因為投資計畫書承諾體育活動超過 50%。至於附設的百貨影城與商辦，是為了支持投資計畫書承諾的體育活動，讓遠雄賺錢。<strong>而且，正因為當初承諾體育活動超過 50%，所以才順利以「體育館」名義取得建照，順利復工。</strong></p>
 <p class="pqnote">然而，遠雄建設得標、復工、甚至商場都要開了，遠雄卻突然翻臉不認帳，不承認運動賽事比例。苗博雅在質詢柯文哲時，柯文哲甚至還說，對於「運動賽事」的定義並不清楚，還嗆苗博雅<strong>「你那麼厲害、你來定義看看」</strong>。讓苗博雅怒批，柯文哲市長居然不清楚「體育賽事」的範圍是什麼？</p>
 <p>苗博雅說，有投標政府公共工程、標案經驗的人都知道，投資計畫書、服務建議書，得標後都會成為契約的一部分。苗博雅表示，柯文哲能否站在市民的立場，要求遠雄遵守投標時提出的計畫，捍衛大巨蛋的體育賽事比例？還是變成遠雄的好夥伴，跟遠雄一搭一唱，不承認當初的承諾？</p>
 <figure class="wp-block-embed is-type-rich is-provider-embed-handler wp-block-embed-embed-handler">
