Update VOCUS 2022-08-23 patch

--- a/_posts/2022-08-22-VOCUS-泳漾水男孩-游到心的盡頭.html
+++ b/_posts/2022-08-22-VOCUS-泳漾水男孩-游到心的盡頭.html
@@ -39,4 +39,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/00ae5d48-72b2-43cf-a54d-692e5ca70e65.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">雖然以色列經過漫長時間對於同志友善的程度越發成熟，但在特定的職業圈內其實還是可見歧視性，政府政策跟社會認同，本身就並不是同一條平行線，故有時候改變一個職場或團體氣氛需要時間。尤其常見同志最大的敵人，往往是無法走出自我認同的深櫃人士，有時候反而是比異性反對更兇的一群。</div>
 <div class="draft-block draft--p left">而我覺得電影裡面有趣的角色反而是配角，像是教練和舍監。教練准許男女之間有些親密，但卻一直注意主角對男隊員的情愫，甚至一些動作和言行，不得不讓人有另一種想法。而女舍監更是一種難以言喻的存在，也是與主角埃萊斯許多深沉交流的女人，我想就某方面，埃萊斯同性戀身分的自我認同，也許就跟當年女舍監對於自己女性身分認同互相間，有種說不出的我走過的路你正要走過。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/rJMKAjn5iOE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/rJMKAjn5iOE"></iframe></div>
