--- a/_posts/2022-08-22-PQ-扛住歐美壓力-印度計劃參加俄羅斯-東方2022-軍演.html
+++ b/_posts/2022-08-22-PQ-扛住歐美壓力-印度計劃參加俄羅斯-東方2022-軍演.html
@@ -36,7 +36,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y.jpg" alt="" class="wp-image-112068" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y.jpg 945w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y-768x576.jpg 768w" sizes="(max-width: 945px) 100vw, 945px" /><figcaption>評論者認為，印度處在美國、俄羅斯與中國之間，猶如走鋼索般危險。<br>圖／The Times of India</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y.jpg" alt="" class="wp-image-112068" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y.jpg 945w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9876fc4d-y345y-768x576.jpg 768w" sizes="(max-width: 945px) 100vw, 945px" /><figcaption>評論者認為，印度處在美國、俄羅斯與中國之間，猶如走鋼索般危險。<br>圖／The Times of India</figcaption></figure></div>
 
 
 
