Update VOCUS 2022-08-24 patch

--- a/_posts/2022-08-23-VOCUS-士兵與軍官-蘇維埃密戀.html
+++ b/_posts/2022-08-23-VOCUS-士兵與軍官-蘇維埃密戀.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6a9d808f-702d-4f09-851c-20d628d38196.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">同樣是出於真人真事回憶錄改編，《士兵與軍官》會一直讓我想到過去1992年上映的禁忌戀曲，荷蘭男孩與加拿大士官之間的禁忌愛戀《軍官和男孩》。前者有著完整的頭尾長達多年的轉折鋪墊，後者則是回憶與思念聚焦兩人那短暫的邂逅時光，就我自己主觀還是多愛《軍官和男孩》這樣聚焦於兩人關係重點，勝過《士兵與軍官》的細水長流。</div>
 <div class="draft-block draft--p left">當然《士兵與軍官》帶出的冷戰氛圍，和在蘇維埃政權下蘇聯體制對於軍中同志出櫃的壓迫，與如今解體俄羅斯依舊不被接受的LGBT人權，和社會排他性，都還是再再顯現這部電影的重要。如今俄羅斯軍中還是對同志採取非正式的「不問不說」政策，想必戰爭的襲來後別說尊重性向了，就連尊重鄰國人民的選擇，都已經是充耳不聞之事。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/GZVgRLI6QFY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/GZVgRLI6QFY"></iframe></div>
