--- a/_posts/2022-08-24-INMEDIA-政府限制維港渡海泳最多500人參與-總會稱失望不排除停辦.html
+++ b/_posts/2022-08-24-INMEDIA-政府限制維港渡海泳最多500人參與-總會稱失望不排除停辦.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/08241200-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>維港渡海泳今年10月底舉行，中國香港游泳總會表示，接獲政府通知指參賽人數連同工作人員，最多容許500人參與，對安排感到失望，已表明不排除取消活動。</p>
-<p>中國香港游泳總會會長王敏超今早接受商台訪問，指昨日接獲民政事務及青年局回覆，任何大型活動的上限人數均為500人，表示「只能盡量諗辦法，係牽涉到全港性市民嘅安全嘅」。</p>
+<p>中國香港游泳總會會長王敏超今早接受商台訪問，指昨日接獲文化體育及旅遊局回覆，任何大型活動的上限人數均為500人，表示「只能盡量諗辦法，係牽涉到全港性市民嘅安全嘅」。</p>
 <p>王敏超透露，曾向當局反建議容許2,000人分批出發，但同遭拒絕，認為屬同一活動，「一刀切咁定咗呢個原則」。他引用世衞資料稱，海水及泳池的氯氣均殺菌，「起碼呢隻（新冠）菌喺海水生存唔到」。</p>
 <p>停辦了兩年的維港渡海泳，在去年重新復辦，有1,500人參加。王敏超慨嘆，維港渡海泳歷年最高峰曾有4,000人參與，指如最終只有500人參加或會取消，「唔做啦，變咗嘥資源，都唔值得，維港啲船又要停咗等我哋。」</p>
 </div></div></div>
