Update VOCUS 2022-08-25 patch

--- a/_posts/2022-08-24-VOCUS-重塑日本風景-地方如何重生.html
+++ b/_posts/2022-08-24-VOCUS-重塑日本風景-地方如何重生.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">不過裡面其實就像設計師梅原真所敘述的一樣，多半是以高知縣當地的農產漁業為主的設計物，其中又以四萬十川地區的相關設計為主，例如茶葉、海苔等農產品。但其實看得出來設計師梅原真其實一直傳達一點就是區域振興成敗的關鍵，其實重點並不再於他這個設計師，而是在於地方上的人是否有認真思考並關注自己的家鄉和產業。</div>
 <div class="draft-block draft--p left">不要以為一有錢或政府補助就外包給大廠和國際設計師，地方振興就可以躺著等成功，梅原真認為這是錯誤的。自己要努力的事情不要推給別人，設計師跟金費都只是一種輔助，所謂的錢要花在刀口上，如果自己都不重視地方，那麼即便大師級出馬也無法，故某方面當地產業的成功歸功的不只設計師梅原真，還有書中提到或沒露面的各個地方人士的努力所達到的。</div>
 <div class="draft-block draft--p left">故台灣各地的人是否也有真正看待自己生活土地的一天？也許對於某些只把台灣當作利益籌碼想買賣的人，很難理解梅原真的地方設計之理。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/eDKiFNxCb3g"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/eDKiFNxCb3g"></iframe></div>
