--- a/_posts/2022-08-24-PQ-禁俄旅客入境-愛沙尼亞-俄羅斯公民對戰爭負-道義責任.html
+++ b/_posts/2022-08-24-PQ-禁俄旅客入境-愛沙尼亞-俄羅斯公民對戰爭負-道義責任.html
@@ -20,7 +20,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-1024x756.png" alt="波羅的海三國及波蘭的計畫需要獲得北約 29 個盟國的一致同意才能實行" class="wp-image-14658" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-1024x756.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-300x221.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-768x567.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝.png 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>波羅的海三國及波蘭與俄羅斯相關地理位置（圖／Google Map／報呱再製）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-1024x756.png" alt="波羅的海三國及波蘭的計畫需要獲得北約 29 個盟國的一致同意才能實行" class="wp-image-14658" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-1024x756.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-300x221.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝-768x567.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2019/12/d44d400a-截圖-2019-12-01-上午10.46.55拷貝.png 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>波羅的海三國及波蘭與俄羅斯相關地理位置（圖／Google Map／報呱再製）</figcaption></figure>
 
 
 
