--- a/_posts/2022-08-25-INITIUM-陈紫娟千里-开庭记-从深圳到凤县-去守候一位人权律师的庭审.html
+++ b/_posts/2022-08-25-INITIUM-陈紫娟千里-开庭记-从深圳到凤县-去守候一位人权律师的庭审.html
@@ -9,7 +9,8 @@ author: 特约撰稿人 Sharon
 ---
 
 <p>「2022年的这个夏天，律师常玮平正以自己38岁的生命，承受着一场生命中的风暴。他的坚强，让妻子陈紫娟感到骄傲。」</p><p>特约撰稿人 Sharon</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220825-mainland-human-rights-lawyer-trial-changweiping-wife-chenzijuan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/f28d9c2447794118845abb02744c1c21.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><small>【编者按】本文由端传媒与NGOCN声音计划联合发布，首发于端传媒。去年6月，我们曾报道中国人权律师常玮平于2020年1月第一次被抓捕后，取保候审软禁在陕西老家的状况，以及因为在网上发布自己被酷刑的经过，于2020年10月再次以“涉嫌煽动颠覆国家政权”罪被逮捕，并被关押至今（见<a href="https://theinitium.com/article/20210608-mainland-changweiping/">《律师常玮平，一个不见容于国家的人》</a>）。</small></p>
+            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><small><strong>【编者按】本文由端传媒与NGOCN声音计划联合发布，首发于端传媒。</strong></small></p>
+<p><small>【去年6月，我们曾报道中国人权律师常玮平于2020年1月第一次被抓捕后，取保候审软禁在陕西老家的状况，以及因为在网上发布自己被酷刑的经过，于2020年10月再次以“涉嫌煽动颠覆国家政权”罪被逮捕，并被关押至今（见<a href="https://theinitium.com/article/20210608-mainland-changweiping/">《律师常玮平，一个不见容于国家的人》</a>）。</small></p>
 <p><small>今年7月，常玮平案件开庭的日期公布，妻子陈紫娟决定带一家人从深圳赶去陕西凤县，于开庭当日在法院门外守候。以下是陈紫娟与母亲和孩子的这段经历。</small></p>
 <p>一身翠绿色的西装套裙，平时难得有机会穿，2022年7月26日这一天，陈紫娟要穿着它，去“围观”丈夫常玮平的庭审。</p>
 <p>宝鸡市凤县法院已宣布常玮平“煽动颠覆国家政权”一案不公开审理。这剥夺了她作为家属旁听这场审判的机会。但她抱着希望，计划带上母亲、儿子，站在法院外边，或许，从看守所到法庭的路上，常玮平能透过囚车的窗户，看见他们。</p>
