--- a/_posts/2022-08-25-INITIUM-娱乐工业与资本-k-pop偶像是如何被-非人化-的.html
+++ b/_posts/2022-08-25-INITIUM-娱乐工业与资本-k-pop偶像是如何被-非人化-的.html
@@ -5,10 +5,10 @@ date: 2022-08-25 03:30:00.000000000 +00:00
 link: https://theinitium.com/article/20220826-international-kpop-entertainment-capitalism/
 categories: initium
 tags: blog
-author: 端传媒实习记者 包正榕
+author: 包正榕
 ---
 
-<p>「对于韩国的“八十八万韩元世代”，K-pop偶像们是崇拜的对象，是遥不可及的明星，但也是明天就能过气的商品。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220826-international-kpop-entertainment-capitalism/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/47e3ba1c98fd4a2ea32e73d0dde04b33.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="韩团Blackpink新曲“Pink Venom”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「对于韩国的“八十八万韩元世代”，K-pop偶像们是崇拜的对象，是遥不可及的明星，但也是明天就能过气的商品。」</p><p>端传媒实习记者 包正榕</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220826-international-kpop-entertainment-capitalism/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/47e3ba1c98fd4a2ea32e73d0dde04b33.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="韩团Blackpink新曲“Pink Venom”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">韩团Blackpink新曲“Pink Venom”。<span class="credit">网上图片</span></figcaption></figure><p>韩团Blackpink在8月19日带著新曲“Pink Venom”回归，不消一天，新曲在Youtube上的点击数已经过亿。自2016年出道并爆红起，Blackpink即使回归（即推出新曲）次数少之又少，但名牌代言和商演不绝，所以四个成员身价仍是水涨船高，每名成员被估算的资产净值都过千万美元。而且，Blackpink的人气绝不限于韩国本土：新曲打入了多国流行榜，而新专辑单是预售就过一百五十万。现时最炙手可热的男团BTS（防弹少年团）在2020年推出的Map of the Soul: 7专辑，全球销量达六百多万，能跟许多欧美人气歌手的销量比肩（“怪比莉”Billie Eilish的最高销量专辑卖了六百多万张；前One Direction成员 Harry Styles的最高销量约三百多万）。</p>
 <p>自2000年以后，韩国周边的国家也都纷纷仿效韩国的造星模式，即使实际模仿了多少很难一概而论。香港的ViuTV推出的《全民造星》系列﹑中国的《偶像练习生》﹑《青春有你》和《创造营》，还有台湾的《原子少年》和《菱格世代Dancing Diamond 52》，全部都找到韩国经典选秀节目《Produce 101》的影子：偶像要出道就要有粉丝肯花钱让他们胜出选秀。香港男团Mirror的团歌《Warrior》﹑《Boss》﹑《All in Once》等均由作曲家Val Del Prete及韩国音乐人Hwan Yang作曲，二人也为韩团如Twice﹑GFRIEND和aespa等作过曲。而现在在中国和香港都很流行的，粉丝为偶像买广告板，制作和派发精品等应援文化，更加是由90年代末由韩国一代团体开始带起的风潮。</p>
 <p>一直以来，许多学者和记者都在争相定义“K-pop模式”－－究竟韩国流行音乐的崛起，是要归因于音乐类型（沿用黑人R&B等音乐类型）﹑粉丝应援文化﹑选秀和练习生制度，还是跨国的制作模式？虽然“偶像艺人”或“爱豆”的名号初起源于日本，但将制造偶像公式化，并且将这条公式外销到其他东亚地区的，还是九十年代末以后的韩国。这条公式将一些韩国少年少女捧成了身家千万的国际明星，但也受到了不少诟病：对于偶像外型不合理的要求﹑极长的工作时间﹑厚重“人设”令艺人不能表现自我﹑未成年少男少女卖弄性感等等。《纽约客》在2012年一篇著名报道中，将SM的天团少女时代形容为“factory girls”－－流水线下高度同质化的产品。这种高度同质化，最直接的影响就是演艺人员的非人化：即使娱乐工业里存在著明显的剥削，演艺人员过劳﹑出现心理问题也很常见，但这些争议，似乎都没能改变行业规则。</p>
