--- a/_posts/2022-08-25-INITIUM-写给当时的你-二-科技-社媒与-进步-回给两则来自2017年的留言.html
+++ b/_posts/2022-08-25-INITIUM-写给当时的你-二-科技-社媒与-进步-回给两则来自2017年的留言.html
@@ -5,11 +5,11 @@ date: 2022-08-25 02:38:00.000000000 +00:00
 link: https://theinitium.com/article/20220826-7th-year-letter-to-the-past-2/
 categories: initium
 tags: blog
-author: 
+author: 端传媒编辑部
 ---
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220826-7th-year-letter-to-the-past-2/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/2a339770f07d4df1a54046d07a463594.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p>端传媒七岁了。七年，挺久的。七年前，你在哪里呢？这些年，你有过怎样的故事？一路来，端珍藏了许多读者寄来的留言，这次的周年编读活动“写给当时的你”，我们的编辑记者们找回了许多当时的困惑或情感，并会试著与你隔空对话：时至今日，旧时的存疑是否寻得解答，未来又会怎样呢？这是第二篇，我们回复了五年前两位读者对于科技、社媒与“进步”相关的思考。</p>
+<p>「这样寻找共识的反反复复的过程，来来回回的辩证，我觉得－－大概比科技本身，更值得我们寄予希望。」</p><p>端传媒编辑部</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220826-7th-year-letter-to-the-past-2/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/055869853e0f467684c7fe8303e8801a.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>端传媒七岁了。七年，挺久的。七年前，你在哪里呢？这些年，你有过怎样的故事？一路来，端珍藏了许多读者寄来的留言，这次的周年编读活动“写给当时的你”，我们的编辑记者们找回了许多当时的困惑或情感，并会试著与你隔空对话：时至今日，旧时的存疑是否寻得解答，未来又会怎样呢？这是第二篇，我们回复了五年前两位读者对于科技、社媒与“进步”相关的思考。</small></p>
 <blockquote>
 <p>作为不可救药的科技教徒，我还是坚信科技的中立，更深信长远而言科技总是会让人类社会变得更好。社会问题从科技来，必从科技解决。</p>
 </blockquote>
