Update VOCUS 2022-08-29 patch

--- a/_posts/2022-08-28-VOCUS-好想放假的消防員.html
+++ b/_posts/2022-08-28-VOCUS-好想放假的消防員.html
@@ -8,9 +8,7 @@ tags: blog
 author: 王大明-寫出可以與小孩分享的法律故事
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/e9d0d4ed-f724-4473-98ea-c090e9e265b3"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/e9d0d4ed-f724-4473-98ea-c090e9e265b3"></iframe></div>
 <div class="draft-block draft--p left">阿保是一個消防員，他很認真，每次有火災發生，他都是第一個衝進火場。<br>一定要將受困的人全部救出來，他才最後一個離開。</div>
 <div class="draft-block draft--p left">他有好多同伴，跟他一起滅火。<br>有一次，他們看到了一間房子失火，火好大好大。</div>
 <div class="draft-block draft--p left">同伴阿勇鼓起勇氣，想衝進火場救人，阿保阻止了他：<br>「阿勇，讓我先進去吧！」<br>『阿保，不要阻止我了，救人要緊啊！』<br>「阿勇，裡面太危險了。你的小孩才剛出生，我不希望他明天就沒了父親。我還沒結婚，這次讓我先進去吧。」</div>
@@ -28,6 +26,3 @@ author: 王大明-寫出可以與小孩分享的法律故事
 <div class="draft-block draft--p left">到了晚上，大火熄滅了。<br>終於，阿保這次可以順利放假，回家跟家人吃飯、好好睡個覺了。</div>
 <h2 class="draft-block draft--h2" name="header-914sp">延伸閱讀：<a href="https://vocus.cc/article/63002489fd89780001a3dd78" target="_blank" class="draft--a">🍐 好想放假的消防員</a></h2>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/7c9895c4-3743-43c0-bf51-487145f719a7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"> </figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
