--- a/_posts/2022-08-28-VOCUS-otherwise-與-否則-若非則-若是無則-其它無以說言(之)-于談及危險曰-于談反異之果-另有後果-等的橋接.html
+++ b/_posts/2022-08-28-VOCUS-otherwise-與-否則-若非則-若是無則-其它無以說言(之)-于談及危險曰-于談反異之果-另有後果-等的橋接.html
@@ -27,11 +27,8 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">otherwise = 口力have.rear木with雙E = 另有後木與EE = 另有後木與田 = 另有後果</span>，其中 t 通過旋轉鏡射約略象徵漢文「力」，he 代表 have 再轉換漢字「有」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">otherwise = otherrwise 省一個 r = other.rwise = 其它.rear木with雙E = 其它.後木與EE = 其它.後木與田 = 其它.後果 = 其它後果</span>。其中 other 同前述轉換漢字「其它」，rear 轉換漢字「後」。</div>
 <div class="draft-block draft--p left"><br>English 的 otherwise 一字多作形容詞、附加形容詞或副詞使用，可以放在句首、句尾、句中，也可以在單字前、單字後或單字前後加上逗號形成一個單獨的斷詞。在作爲附加形容詞或副詞時，現代中文漢字有時會用一個字尾「地」來加強表達這種詞式，例如「其它地」、「另外地」、「其它無以說言地」、「無的話有後果地」、「另有後果地」之類，而此時 otherwise  的字尾 e 一樣能轉換漢字「地」，即 <span style="font-weight: bold; ">e = 一 (象徵「地平線」而轉換漢字「地」) = 地</span>，或是<span style="font-weight: bold; "> e = earth = 地</span>，所以就不必再加 -ly 而寫成冗長的 otherwisely 來表達這種詞式。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-74p3u"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">or otherwise：或若非則；或若是無則；或者略忽而無以知之；或者其它無以說言(之)；或者其它未言明(之)；或許零法描述之</span>，意通「或許無法描述的」<span style="font-weight: bold; ">；或是于談及危險曰；或另于談及威脅言；不然于談行反道之說言；不然于談反異之果；不然零同會有之果；或許無的話有後果；否則另有後果；或其它後果；反則有後果。</span></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/SpeSpA3e56A"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/SpeSpA3e56A"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/SpeSpA3e56A" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/SpeSpA3e56A</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Extraordinary Until Proven Otherwise / 分享自 YouTube】(P.S.</span> 這部對於某次 UFO 目擊事件解說詳盡的影片之標題 Extraordinary Until Proven Otherwise 若輸入「Google翻譯 (英翻中)」查詢，會得出「非同尋常，除非另有證明」的漢字轉換，其中的 otherwise 轉換的漢字「另有」也就是類似前述橋接轉換的「其它無以說言(之)」所含概的「另有之」或「除此以外」之意；until 則解作「除非」，即 <span style="font-weight: bold; ">until = u聯ti兩 = 余tti二 = 余ttitti = 余𠂤ten1three.three1 = 余𠂤十丨三三丨= 余阜非 = 余阝非 = 除非</span>，其中 u 約略形聲漢語「余」再轉音。<span style="font-weight: bold; ">)</span></div>
-<div class="draft-block draft--p left"></div>
