Update VOCUS 2022-08-31 patch

--- a/_posts/2022-08-30-VOCUS-末日救世主-但末日沒有來.html
+++ b/_posts/2022-08-30-VOCUS-末日救世主-但末日沒有來.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/75de7a84-7bbd-41c7-b5ca-c5739db49710.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">整體來說《末日救世主》符合亞洲直男子的笑點，畢竟這是作者本來就擅長的方式，但有些梗重複利用多次會顯得無聊。《重金搖滾雙面人》中的處男梗，在《末日救世主》中一樣的出現和差不多的安排，我認為需在更有新意一點的安排，會較為符合當代的笑點，不然因為是多年後改編，有些笑點明顯過時。</div>
 <div class="draft-block draft--p left">在劇情上我覺得優點在於《末日救世主》演員演出那種自己不尷尬，尷尬就是別人的末日戰士搞笑，並且也重現許多漫畫經典橋段。但是因為完整的呈現，導致電影冗長，且節奏也常常讓人不耐煩，故可能在安排緊湊一些會讓人更有電影的刺激感跟笑料密集發酵，不然太過鬆散的漫畫節奏反而讓電影整體變得拖泥帶水，失去原本真人化的利處。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/baNCH3eJHJ8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/baNCH3eJHJ8"></iframe></div>
