--- a/_posts/2022-08-30-PQ-中國無人機頻擾外島-外交部-不請自來就是賊.html
+++ b/_posts/2022-08-30-PQ-中國無人機頻擾外島-外交部-不請自來就是賊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 楊是命
 ---
 
-<p>中國無人機近來屢次騷擾我方金門軍事基地，並錄製影片於微博上轉傳，試圖打擊台灣軍心。國防部邱國正今（30）日表示，國防部已有策進作為，但礙於軍情不宜公開說明，強調會以自我防衛為限。民進黨立院黨團副幹事長林靜儀說，這是中國在做騷擾動作，民進黨黨團要求國防部必須有因應措施。</p>
+<p>中國無人機近來屢次騷擾我方金門軍事基地，並錄製影片於微博上轉傳，試圖打擊台灣軍心。國防部邱國正今（30）日表示，國防部已有因應作為，但礙於軍情不宜公開說明，強調會以自我防衛為限。民進黨立院黨團副幹事長林靜儀說，這是中國在做騷擾動作，民進黨黨團要求國防部必須有因應措施。</p>
 
 
 
@@ -20,7 +20,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-1024x756.png" alt="" class="wp-image-112884" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-1024x756.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-300x221.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-768x567.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20.png 1268w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>中國軍方或民間人士，操作無人機騷擾金門哨點，並上傳到微博，以之訕笑台灣軍方、打擊台灣民心。 <br>（圖／擷取自微博）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-1024x756.png" alt="" class="wp-image-112884" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-1024x756.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-300x221.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20-768x567.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/9da16d88-截圖-2022-08-30-下午4.20.20.png 1268w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>中國軍方或民間人士，操作無人機騷擾金門哨點，並上傳到微博，以之訕笑台灣軍方、打擊台灣民心。 <br>（圖／擷取自微博）</figcaption></figure></div>
 
 
 
