--- a/_posts/2022-08-30-INITIUM-早报-苏联最后一任领导人戈尔巴乔夫去世-终年91岁.html
+++ b/_posts/2022-08-30-INITIUM-早报-苏联最后一任领导人戈尔巴乔夫去世-终年91岁.html
@@ -42,7 +42,7 @@ author:
 <p>萨德尔周一宣布退出政坛，导致其支持者与政府安全部队和伊朗支持的武装组织发生冲突，支持者中至少22人死亡。</p>
 <p>萨德尔周二向伊拉克人民道歉，并谴责暴力冲突，要求其支持者在一小时内散去。萨德尔在电视讲话中称，“这不是一场革命，因为它已失去和平本质”，“不得让伊拉克人流血”。</p>
 <p>萨德尔的支持者已占领议会数周，拥护萨德尔此前提出解散议会并重新选举的主张。伊拉克议会在过去10个月陷入停摆，创下该国持续无政府最久纪录。</p>
-<h3>沙特女性因发帖获刑45年</h3>
+<h3>沙特女子因发帖获刑45年</h3>
 <p>总部位于美国华盛顿特区的人权组织“现在就为阿拉伯世界争民主”（DAWN）指，沙特阿拉伯女子努拉·卡赫塔尼（Nourah bint Saeed al-Qahtani）因在社交媒体发帖，被<a href="https://www.reuters.com/world/middle-east/saudi-woman-gets-45-year-prison-term-social-media-posts-rights-group-2022-08-30/">法院判处45年监禁</a>。</p>
 <p>DAWN引述法庭文件指，努拉·卡赫塔尼可能在上周被沙特专门刑事法院定罪，罪名是“利用互联网破坏社会结构”和“利用社交媒体违反公共秩序”。</p>
 <p>DAWN还表示，目前该机构对努拉·卡赫塔尼发布的具体内容所知甚少，将会继续跟踪此案。</p>
