--- a/_posts/2022-09-01-INMEDIA-楊何蓓茵承認政府正研究-疫苗通-範圍-最低涵蓋至5歲小童.html
+++ b/_posts/2022-09-01-INMEDIA-楊何蓓茵承認政府正研究-疫苗通-範圍-最低涵蓋至5歲小童.html
@@ -14,5 +14,5 @@ author: 獨媒報導
 <p><strong>何栢良建議打兩針復必泰或三針科興成基本要求</strong></p>
 <p>港大感染及傳染病中心總監何栢良今早在商台節台中表示，若政府將「疫苗通行證」的年齡下限由12歲降至5歲，他會支持，因為確診兒童患重症的危險性較高，他建議將兒童打齊兩針復必泰或三針科興作為基本要求。另外對於第三針寛限期，他認為政府推行政策時需要同時考慮是否需要市民在冬天接種加強劑，亦要考慮科興和復必泰加強劑產生抗體有效期的差異。</p>
 <p>另外政府早前已新增16間私家診所提供科興及復必泰疫苗接種，今日起投入服務，楊何蓓茵今早視察銅鑼灣一間私家診所，她指16間診所交通方便，市民可以透過政府網站預約在私家診所打針，無需像以往致電診所預約，截至昨日已經有約7,300人預約前往私家診所打針。</p>
-<p>她又指部分體育館將來會回復本身用途，或者用作接收安老院舍爆發而要隔離的長者，不過未有退場時間日一女。她透露預計長遠以私家診所，取代社區體育館接種。</p>
+<p>她又指部分體育館將來會回復本身用途，或者用作接收安老院舍爆發而要隔離的長者，不過未有退場時間。她透露預計長遠以私家診所，取代社區體育館接種。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
