--- a/_posts/2022-09-01-INMEDIA-棄置車輛滿街-申訴專員指部門卸責-地政曾拒處理逾兩年.html
+++ b/_posts/2022-09-01-INMEDIA-棄置車輛滿街-申訴專員指部門卸責-地政曾拒處理逾兩年.html
@@ -27,4 +27,6 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/70Qo864Fbg" title="螢幕截圖 2022-09-01 下午2.31.02"><img src="https://live.staticflickr.com/65535/52325202887_8f36edbe81_b.jpg" width="1024" alt="螢幕截圖 2022-09-01 下午2.31.02" /></a></p>
 <p>特區政府換屆後，新成立的「地區事項統籌巡視工作組」，日前亦有<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%94%BF%E5%BA%9C%E6%93%AC%E4%BF%AE%E4%BE%8B%E6%89%93%E6%93%8A%E6%A3%84%E8%BB%8A-%E9%81%95%E8%80%85%E6%88%96%E7%9B%A3%E7%A6%81-%E7%BE%85%E6%B7%91%E4%BD%A9%EF%BC%9A%E5%94%94%E4%BF%82%E7%AD%89%E6%94%BF%E5%BA%9C%E5%B9%AB%E4%BD%A0%E5%9F%B7%E6%89%8B%E5%B0%BE">巡視廢棄電單車</a>，運輸署稱將修例，如車主未能在兩年內為車輛續牌，而車輛被發現棄置在公共地方上即屬違法。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/eyE77Ry8K7" title="螢幕截圖 2022-09-01 下午2.32.04"><img src="https://live.staticflickr.com/65535/52326524025_90222ed170_b.jpg" width="1024" alt="螢幕截圖 2022-09-01 下午2.32.04" /></a></p>
+<p>運輸署晚上發稿回應，同意報告建議，並指將會修訂《道路交通（車輛登記及領牌）規例》（第374E章），要求已滿兩年未有續領車輛牌照的車輛，登記車主若沒有在指定期間為該車輛續領車輛牌照，或取消該車輛的車輛登記，或取得運輸署署長的豁免，即屬犯法。署方現時正就修例事宜及刑罰水平徵詢律政司的意見，預計今年內向立法會提交修例建議，於2024年上半年實施新安排。</p>
+<p>運輸署亦表明會配合地政總署的搜證工作及提供車輛登記冊內車主的資料，以便地政總署追查涉嫌棄置車輛車主的身份，解決棄置車輛的問題。　　</p>
 </div></div></div>
