--- a/_posts/2022-09-01-PQ-曹興誠宣佈保台兩計畫-十億捐款建-黑熊勇士-保鄉神射.html
+++ b/_posts/2022-09-01-PQ-曹興誠宣佈保台兩計畫-十億捐款建-黑熊勇士-保鄉神射.html
@@ -40,7 +40,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029.jpg" alt="" class="wp-image-113093" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029-300x206.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029-768x528.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>聯電前董事長曹興誠（左2）頭戴頭盔、身穿防彈背心舉行記者會，宣布將資助兩個保台計畫。右起為前哨預策創辦人范疇、黑熊學院共同發起人沈伯洋。（圖／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029.jpg" alt="" class="wp-image-113093" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029-300x206.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/d2b2344e-1117x768_20220901000029-768x528.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>聯電前董事長曹興誠（左2）頭戴頭盔、身穿防彈背心舉行記者會，宣布將資助兩個保台計畫。右起為前哨預策創辦人范疇、黑熊學院共同發起人沈伯洋。（圖／中央社）</figcaption></figure>
 
 
 
